--- a/Read/ReadAndroidWiki/01.基础组件/11.Fragment基础使用.md
+++ b/Read/ReadAndroidWiki/01.基础组件/11.Fragment基础使用.md
@@ -1,59 +1,45 @@
 #### 目录介绍
 - 01.什么是Fragment
-- 02.Fragment生命周期
-- 03.Fragment使用
-    - 3.1 静态使用
-    - 3.2 动态使用
-    - 3.3 传递参数
+- 02.Fragment使用
+    - 2.1 静态使用
+    - 2.2 动态使用
+- 03.Fragment交互
+    - 3.1 最常用的方法
+    - 3.2 Fragment与Activity之间传值
+    - 3.3 Fragment与Fragment之间传值
+    - 3.4 为何不构造传值
 - 04.Fragment回退栈
 - 05.Fragment与Activity通信
 - 06.Fragment旋转场景
 - 07.Fragment使用建议
-    - 7.3 Fragment高耦合性
 - 08.Fragment遇到的坑
     - 8.1 getActivity()空指针
     - 8.2 Fragment发生重叠
     - 8.3 Fragment叠加点击穿透
     - 8.4 commitAllowingStateLoss
-
+- 09.Fragment一些疑惑
+    - 9.1 思考Fragment能否不依赖Activity
 
 
 
 ### 01.什么是Fragment
 - 什么是Fragment
     - 可以简单的理解为，Fragment是显示在Activity中的Activity。它可以显示在Activity中，然后它也可以显示出一些内容。因为它拥有自己的生命周期，可以接受处理用户的事件，并且你可以在一个Activity中动态的添加，替换，移除不同的Fragment，因此对于信息的展示具有很大的便利性。
-    - 作为 view 界面的一部分，Fragment 的存在必须依附于 FragmentActivity使用，并且与 FragmentActivity 一样，拥有自己的独立的生命周期，同时处理用户的交互动作。同一个 FragmentActivit 可以有一个或多个 Fragment 作为界面内容，同样Fragment也可以拥有多个子Fragment，并且可以动态添加、删除 Fragment，让UI的重复利用率和易修改性得以提升，同样可以用来解决部分屏幕适配问题。
+    - 作为 view 界面的一部分，Fragment 的存在必须依附于 FragmentActivity使用，并且与 FragmentActivity 一样，拥有自己的独立的生命周期，同时处理用户的交互动作。
+    - 同一个 FragmentActivity 可以有一个或多个 Fragment 作为界面内容，同样Fragment也可以拥有多个子Fragment，并且可以动态添加、删除 Fragment，让UI的重复利用率和易修改性得以提升，同样可以用来解决部分屏幕适配问题。
 - Fragment是组件还是控件
-    - 严格意义上来说Fragment并不是一个显示控件，而只是一个显示组件。为什么这么说呢？其实像我们的Activity，Dialog，PopupWindow以及Toast类的内部都管理维护着一个Window对象，这个Window对象不但是一个View控件的集合管理对象，它也实现了组件的加载与绘制流程，而我们的Fragment组件如果看过源码的话，严格意义上来说，只是一个View组件的集合并通过控制变量实现了其特定的生命周期，但是其由于并没有维护Window类型的成员变量，所以其不具备组件的加载与绘制功能，因此其不能单独的被绘制出来，这也是我把它称之为组件而不是控件的原因。
-- 使用条件
-    - 宿主Activity 必须继承自 FragmentActivity；
-    - 使用getSupportFragmentManager() 方法获取 FragmentManager 对象；
+    - 严格意义上来说Fragment并不是一个显示控件，而只是一个显示组件。为什么这么说呢？其实像我们的Activity，Dialog，PopupWindow以及Toast类的内部都管理维护着一个Window对象，这个Window对象不但是一个View控件的集合管理对象，它也实现了组件的加载与绘制流程。
+    - 而我们的Fragment组件如果看过源码的话，严格意义上来说，只是一个View组件的集合并通过控制变量实现了其特定的生命周期，但是其由于并没有维护Window类型的成员变量，所以其不具备组件的加载与绘制功能，因此其不能单独的被绘制出来，这也是我把它称之为组件而不是控件的原因。
 
-
-
-### 02.Fragment生命周期
-- Fragment是依附于Activity存在的，因此它的生命周期收到Activity的生命周期影响
-    - ![](http://upload-images.jianshu.io/upload_images/1780352-f8584bc70f3c149c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-- Fragment比Activity多了几个生命周期的回调方法
-    - onAttach：当Fragment与宿主Activity建立联系的时候调用。
-    - onCreate：用来完成Fragment的初始化创建工作。
-    - onCreateView：创建并返回View给Fragment。
-    - onViewCreated：试图创建后调用该方法
-    - onActivityCreated：通知Fragment当前Activity的onCreate()方法已经调用完成。
-    - onViewStateRestored：通知Fragment以前保存的View状态都已经被恢复。
-    - onStart：Fragment已经对用户可见时调用，当然这个基于它的宿主Activity的onStart()方法已经被调用。
-    - onResume：Fragment已经开始和用户交互时调用，当然这个基于它的宿主Activity的onResume()方法已经被调用。
-    - onPause：Fragment不再和用户交互时调用，这通常发生在宿主Activity的onPause()方法被调用或者Fragment被修改（replace、remove）。
-    - onStop：Fragment不再对用户可见时调用，这通常发生在宿主Activity的onStop()方法被调用或者Fragment被修改（replace、remove）。
-    - onDestroyView：Fragment释放View资源时调用。
-    - onDetach：Fragment与宿主Activity脱离联系时调用。
-- 注意：除了onCreateView，其他的所有方法如果你重写了，必须调用父类对于该方法的实现
 
 
 ### 03.Fragment使用
+- 使用条件
+    - 宿主Activity 必须继承自 FragmentActivity；
+    - 使用getSupportFragmentManager() 方法获取 FragmentManager 对象；
 - Activity创建Fragment的方式是什么？
     - 静态创建具体步骤
-        - 首先我们同样需要注册一个xml文件，然后创建与之对应的java文件，通过onCreatView（）的返回方法进行关联，最后我们需要在Activity中进行配置相关参数即在Activity的xml文件中放上fragment的位置。
+        - 首先我们同样需要注册一个xml文件，然后创建与之对应的java文件，通过onCreateView（）的返回方法进行关联，最后我们需要在Activity中进行配置相关参数即在Activity的xml文件中放上fragment的位置。
     - 动态创建具体步骤
         - (1)创建待添加的碎片实例
         - (2)获取FragmentManager，在活动中可以直接通过调用 getSupportFragmentManager（）方法得到。
@@ -68,61 +54,20 @@
     - ① 创建一个类继承Fragment，重写onCreateView方法，来确定Fragment要显示的布局
     - ② 在Activity中声明该类，与普通的View对象一样
 - **代码演示**
-    - 继承Fragment的类MyFragment【请注意导包的时候导v4的Fragment的包】
-    ```
-    public class MyFragment extends Fragment {
-        public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
-            /*
-            * 参数1：布局文件的id
-            * 参数2：容器
-            * 参数3：是否将这个生成的View添加到这个容器中去
-            * 作用是将布局文件封装在一个View对象中，并填充到此Fragment中
-            * */
-            View v = inflater.inflate(R.layout.item_fragment, container, false);
-            return v;
-        }
-    }
-    ```
     - Activity对应的布局文件
     ```
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.yczbj.fragment.MainActivity">
-
+    <LinearLayout >
         <fragment
             android:id="@+id/search_fragment"
             android:name="com.yczbj.fragment.MyFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    
     </LinearLayout>
     ```
     - Activity中的显示和隐藏fragment代码
     ```
     phoneNumFragment = (PhoneNumFragment) getSupportFragmentManager()
                     .findFragmentById(R.id.search_fragment);
-             
-    //处理返回键
-    @Override
-    public void onBackPressed() {
-        if (phoneNumFragment != null && !phoneNumFragment.isHidden()) {
-            hideSearch();
-            return;
-        }
-        super.onBackPressed();
-    }
-    
-    
-    private void hideSearch() {
-        getSupportFragmentManager()
-                .beginTransaction()
-                .hide(phoneNumFragment)
-                .commit();
-    }
-    
     private void showSearch() {
         getSupportFragmentManager()
                 .beginTransaction()
@@ -134,7 +79,6 @@
 
 
 
-
 #### 3.2 动态使用
 - 代码如下所示，这种是平时开发最常用的
     ```
@@ -142,27 +86,14 @@
     Bundle bundle = new Bundle();
     bundle.putSerializable("confirmOrderModel",confirmOrderModel);
     fragment.setArguments(bundle);
+    
+    //添加fragment
     FragmentManager fragmentManager = activity.getSupportFragmentManager();
     FragmentTransaction transaction = fragmentManager.beginTransaction();
     transaction.setCustomAnimations(R.anim.push_bottom_in, 0);
-    //transaction.show(fragment);       //暂时不用这个
     transaction.add(android.R.id.content, fragment, "OrderStatesFragment");
     transaction.commitAllowingStateLoss();
     ```
-- 部分代码说明
-    - ① 穿件一个fragment的实例
-    - ② 通过getSupportFragmentManager()方法新建Fragment管理器对象
-    - ③ 然后通过Fragment管理器对象调用beginTransaction()方法，实例化FragmentTransaction对象，有人称之为事务
-    - ④ FragmentTransaction对象【以下直接用transaction代替】，transaction的方法主要有以下几种：
-        - transaction.add() 向Activity中添加一个Fragment
-        - transaction.remove() 从Activity中移除一个Fragment，如果被移除的Fragment没有添加到回退栈（回退栈后面会详细说），这个Fragment实例将会被销毁
-        - transaction.replace() 使用另一个Fragment替换当前的，实际上就是remove()然后add()的合体
-        - transaction.hide() 隐藏当前的Fragment，仅仅是设为不可见，并不会销毁，它只会触发onHiddenChange()方法。
-        - transaction.show() 显示之前隐藏的Fragment，它只会触发onHiddenChange()方法。
-        - detach() 会将view从UI中移除,和remove()不同,此时fragment的状态依然由FragmentManager维护
-        - attach() 重建view视图，附加到UI上并显示
-        - transaction.commit() 提交事务
-    - 注意：在add/replace/hide/show以后都要commit其效果才会在屏幕上显示出来
 - replace()和hide()区别
     - replace()和hide()都可以动态的在Activity中显示多个Fragment，并且可以来回灵活的切换，但是它们有很大的区别。
     - replace() 方法不会保留 Fragment 的状态，也就是说诸如 EditText 内容输入等用户操作在 remove() 时会消失；
@@ -176,27 +107,44 @@
 
 
 
-#### 3.3 传递参数
-- 如下所示
-    ```
-    public static FirstFragment newInstance(String param1, String param2) {
-        FirstFragment fragment = new FirstFragment();
-        Bundle args = new Bundle();
-        args.putString(ARG_PARAM1, param1);
-        args.putString(ARG_PARAM2, param2);
-        fragment.setArguments(args);
-        return fragment;
-    }
-    
-    @Override
-    public void onCreate(Bundle savedInstanceState) {
-        super.onCreate(savedInstanceState);
-        if (getArguments() != null) {
-            mParam1 = getArguments().getString(ARG_PARAM1);
-            mParam2 = getArguments().getString(ARG_PARAM2);
-        }
-    }
-    ```
+### 03.Fragment交互
+- 注意，fragment尽量用bundle传递数据。fragment.setArguments(args);
+
+
+#### 3.1 最常用的方法
+- 对Fragment传递数据，建议使用setArguments(Bundle args)，而后在onCreate中使用getArguments()取出
+    - 在 “内存重启”前，系统会帮你保存数据，不会造成数据的丢失。和Activity的Intent恢复机制类似。
+    - 使用newInstance(参数) 创建Fragment对象，优点是调用者只需要关系传递的哪些数据，而无需关心传递数据的Key是什么。
+
+
+#### 3.2 Fragment与Activity之间传值
+- 1.Activity向Fragment传值：
+    - 要传的值，放到bundle对象里；
+    - 在Activity中创建该Fragment的对象fragment，通过调用fragment.setArguments()传递到fragment中；
+    - 在该Fragment中通过调用getArguments()得到bundle对象，就能得到里面的值。
+- 2.Fragment向Activity传值：
+    - 第一种：
+        - 在Activity中调用getFragmentManager()得到fragmentManager,，调用findFragmentByTag(tag)或者通过findFragmentById(id)
+        - FragmentManager fragmentManager = getFragmentManager()；
+        - Fragment fragment = fragmentManager.findFragmentByTag(tag)；
+    - 第二种：
+        - 通过回调的方式，定义一个接口（可以在Fragment类中定义），接口中有一个空的方法，在fragment中需要的时候调用接口的方法，值可以作为参数放在这个方法中，然后让Activity实现这个接口，必然会重写这个方法，这样值就传到了Activity中。
+
+
+#### 3.3 Fragment与Fragment之间传值
+- Fragment与Fragment之间是如何传值的？
+    - 第一种：
+        - 通过findFragmentByTag得到另一个的Fragment的对象，这样就可以调用另一个的方法了。
+    - 第二种：
+        - 通过接口回调的方式。
+    - 第三种：
+        - 通过setArguments，getArguments的方式。
+
+
+#### 3.4 为何不构造传值
+- 为什么fragment传递数据不用构造方法传递？
+    - activity给fragment传递数据一般不通过fragment的构造方法来传递，会通过setArguments来传递，因为当横竖屏会调用fragment的空参构造函数，数据丢失。
+
 
 
 ### 04.Fragment回退栈
@@ -207,20 +155,11 @@
     OrderStatesFragment fragment = new OrderStatesFragment();
     FragmentManager fragmentManager = activity.getSupportFragmentManager();
     FragmentTransaction transaction = fragmentManager.beginTransaction();
-    transaction.setCustomAnimations(R.anim.push_bottom_in, 0);
-    //transaction.show(fragment);       //暂时不用这个
     transaction.add(android.R.id.content, fragment, "OrderStatesFragment");
     transaction.commitAllowingStateLoss();
     ```
 - 在某个activity上添加fragment，如果不处理宿主activity中返回键逻辑，点击返回键，关闭了fragment，回到宿主activity页面。
     ```
-    OrderStatesFragment fragment = new OrderStatesFragment();
-    FragmentManager fragmentManager = activity.getSupportFragmentManager();
-    FragmentTransaction transaction = fragmentManager.beginTransaction();
-    transaction.setCustomAnimations(R.anim.push_bottom_in, 0);
-    //transaction.show(fragment);       //暂时不用这个
-    transaction.add(android.R.id.content, fragment, "OrderStatesFragment");
-    transaction.commitAllowingStateLoss();
     transaction.addToBackStack(null); //添加这个，点击返回键，关闭fragment
     ```
 - addToBackStack()方法的作用：
@@ -237,19 +176,7 @@
     - Fragment中可以通过getActivity()得到当前绑定的Activity的实例，然后进行操作。不过不建议这样获取activity的实例，后面会提到的，容易报空指针异常问题。
 - Fragment与Activity通信的优化
     - 因为要考虑Fragment的重复使用，所以必须降低Fragment与Activity的耦合，而且Fragment更不应该直接操作别的Fragment，毕竟Fragment操作应该由它的管理者Activity来决定。
-    - 针对直接创建fragment，一般可以这样写
-    ```
-    QrCodeLoginFragment fragment = new QrCodeLoginFragment();
-    Bundle bundle = new Bundle();
-    bundle.putString("unique_id", content);
-    fragment.setArguments(bundle);
-    FragmentManager fragmentManager = getSupportFragmentManager();
-    FragmentTransaction transaction = fragmentManager.beginTransaction();
-    transaction.add(android.R.id.content, fragment, "qrCodeLoginFragment");
-    transaction.commit();
-    transaction.addToBackStack(null);
-    ```
-    - 针对有些频繁show或者hide的fragment，可以这样处理
+- 针对有些频繁show或者hide的fragment，可以这样处理
     ```
     /**
      * 展示页面
@@ -341,28 +268,18 @@
     - 通过检查onCreate的参数Bundle savedInstanceState就可以判断，当前是否发生Activity的重新创建
     - 默认的savedInstanceState会存储一些数据，包括Fragment的实例
     - 简单改一下代码，判断只有在savedInstanceState==null时，才进行创建Fragment实例
-    ```
-    public class MainActivity extends Activity {
-    
-        private static final String TAG = "FragmentOne";  
-        private FragmentOne mFOne;  
-    
-        @Override  
-        protected void onCreate(Bundle savedInstanceState) {  
-            super.onCreate(savedInstanceState);  
-            requestWindowFeature(Window.FEATURE_NO_TITLE);  
-            setContentView(R.layout.activity_main);  
-            Log.e(TAG, savedInstanceState+"");  
-            if(savedInstanceState == null) {  
-                mFOne = new FragmentOne();  
-                FragmentManager fm = getFragmentManager();  
-                FragmentTransaction tx = fm.beginTransaction();  
-                tx.add(R.id.id_content, mFOne, "ONE");  
-                tx.commit();  
-            }  
+    ``` java
+    @Override  
+    protected void onCreate(Bundle savedInstanceState) {  
+        super.onCreate(savedInstanceState);  
+        if(savedInstanceState == null) {  
+            mFOne = new FragmentOne();  
+            FragmentManager fm = getFragmentManager();  
+            FragmentTransaction tx = fm.beginTransaction();  
+            tx.add(R.id.id_content, mFOne, "ONE");  
+            tx.commit();  
         }  
-    
-    }
+    }  
     ```
 - 现在无论进行多次旋转都只会有一个Fragment实例在Activity中，现在还存在一个问题，就是重新绘制时，Fragment发生重建，原本的数据如何保持？
     - 和Activity类似，Fragment也有onSaveInstanceState的方法，在此方法中进行保存数据，然后在onCreate或者onCreateView或者onActivityCreated进行恢复都可以。
@@ -386,9 +303,6 @@
     - 当子Fragment需要调用宿主Activity的方法时，比如子Fragment需要发送一个消息，但是Fragment没有改方法，所以需要借助宿主Activity去发送，这时候常常需要强制转换content对象，然后调用宿主Activity发方发送广播，这种直接使用的方式违背了高聚低耦的设计原则；
 - 解决办法：通过接口抽象的方法，通过接口去调用宿主Activity的方法。
     ```
-    /**
-     * 发送广播
-     */
     public interface SendBListener {
         void send();
     }
@@ -452,6 +366,8 @@
         - 由于采用创建对象的方式去初始化Fragment对象，当宿主Activity在界面销毁或者界面重新执行onCreate()方法时,就有可能再一次的执行Fragment的创建初始，而之前已经存在的 Fragment 实例也会销毁再次创建，这不就与 Activity 中 onCreate() 方法里面第二次创建的 Fragment 同时显示从而发生 UI 重叠的问题。
         - 如果宿主界面Activity可以横竖屏切换，导致的生命周期重新刷新也同理可导致界面的重叠问题。
     - 重复replace｜add Fragment 或者 使用show , hide控制Fragment；
+- 安卓app有一种特殊情况，就是 app运行在后台的时候，系统资源紧张的时候导致把app的资源全部回收（杀死app的进程），这时把app再从后台返回到前台时，app会重启。这种情况下文简称为：“内存重启”。（屏幕旋转等配置变化也会造成当前Activity重启，本质与“内存重启”类似）
+- 在系统要把app回收之前，系统会把Activity的状态保存下来，Activity的FragmentManager负责把Activity中的Fragment保存起来。在“内存重启”后，Activity的恢复是从栈顶逐步恢复，Fragment会在宿主Activity的onCreate方法调用后紧接着恢复（从onAttach生命周期开始）。
 - **通过源码分析重叠原因**
     - Activity中有个onSaveInstanceState()方法，该方法会在Activity将要被kill的时候回调（例如进入后台、屏幕旋转前、跳转下一个Activity等情况下会被调用）。
     - 当Activity只执行onPause方法时（透明Activity），这时候如果App设置的targetVersion大于11则不会执行onSaveInstanceState方法。
@@ -730,6 +646,26 @@
 
 
 
+### 09.Fragment一些疑惑
+#### 9.1 思考Fragment能否不依赖Activity
+- Fragment能否不依赖于Activity存在？
+    - Fragment不能独立存在，它必须嵌入到activity中，而且Fragment的生命周期直接受所在的activity的影响。
+- transaction只是记录了从一个状态到另一个状态的变化过程
+    - 即比如从FragmentA替换到FragmentB的过程，当通过函数transaction.addToBackStack(null)将这个事务添加到回退栈，则会记录这个事务的状态变化过程，
+    - 如从FragmentA —>FragmentB,当用户点击手机回退键时，因为transaction的状态变化过程被保存，则可以将事务的状态变化过程还原，即将FragmentB —> FragmentA.
+    ```
+    // Create new fragment and transaction
+    Fragment newFragment = new ExampleFragment();
+    FragmentTransaction transaction = getFragmentManager().beginTransaction();
+    
+    // Replace whatever is in the fragment_container view with this fragment,
+    // and add the transaction to the back stack
+    transaction.replace(R.id.fragment_container, newFragment);
+    transaction.addToBackStack(null);
+    
+    // Commit the transaction
+    transaction.commit();
+    ```
 
 
 
