--- a/Read/ReadAndroidWiki/01.基础组件/13.Intent深入分析思考.md
+++ b/Read/ReadAndroidWiki/01.基础组件/13.Intent深入分析思考.md
@@ -268,7 +268,8 @@
     intent.putExtra("key",new User("yc",26));
     User user = getIntent().getParcelableExtra("key");
     ```
-- 通过以上方式的封装，可以看到无论需要序列化传递的对象有多大，在传值的时候只是传递了一个“int”而已。使用该这种方法时需要注意的一点是在数据的接收页面只能使用getIntent()获取一次该对象的值，因为我们在取完一次值后便将该对象从缓存区移除了。
+- 通过以上方式的封装，可以看到无论需要序列化传递的对象有多大，在传值的时候只是传递了一个“int”而已。
+    - 使用该这种方法时需要注意的一点是在数据的接收页面只能使用getIntent()获取一次该对象的值，因为我们在取完一次值后便将该对象从缓存区移除了。
 
 
 
