--- a/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/01.Kotlin类的扩展介绍.md
@@ -16,24 +16,18 @@
 - 在类声明内部可以用`companion`关键字标记对象声明：
     - 我们需要一个类里面有一些静态的属性、常量或者函数，我们可以使用伴随对象。这个对象被这个类的所有对象所共享，就像java中的静态属性或者方法。
     - 注意，一个类中只能定义一个`companion object`，不然会报错
-    ```
+    ``` kotlin
     class AndroidUtils{
         companion object {
             const val name = "yc"
             fun getVersionCode(mContext: Context): Int {
-                var versionCode = 0
-                try {
-                    versionCode = mContext.packageManager.getPackageInfo(mContext.packageName, 0).versionCode
-                } catch (e: PackageManager.NameNotFoundException) {
-                    e.printStackTrace()
-                }
-                return versionCode
+                return 1
             }
         }
     }
     ```
 - 外部调用伴生函数，属性等
-    ```
+    ``` kotlin
     //伴随对象的成员可以通过类名做限定词直接使用：
     val name = AndroidUtils.name
     val versionCode = AndroidUtils.getVersionCode(activity)
@@ -42,11 +36,10 @@
 
 
 ### 03.object对象声明单例
-- 在Java中，单例的声明可能具有多种方式：
-    - 如懒汉式、饿汉式、静态内部类、枚举等；
+- 在Java中，单例的声明可能具有多种方式：如懒汉式、饿汉式、静态内部类、枚举等；
 - 在Kotlin中，单例模式的实现只需要一个 object 关键字即可；
-    - object 关键字声明,其内部不允许声明构造方法，其中init代码块对应java中static代码块
-    ```
+    - object 关键字声明，其内部不允许声明构造方法，其中init代码块对应java中static代码块
+    ``` kotlin
     object SingleObject {
         init {
             //对应java中static代码块
