--- a/Read/ReadAndroidWiki/01.基础组件/14.Context基础介绍.md
+++ b/Read/ReadAndroidWiki/01.基础组件/14.Context基础介绍.md
@@ -16,54 +16,55 @@
 
 
 ### 01.Content的思考
-- Context是什么？
-    - Context是一个抽象基类。在翻译为上下文，也可以理解为环境，是提供一些程序的运行环境基础信息。
-- Context有哪些类型，分别作用是什么？
-    - Context下有两个子类，ContextWrapper是上下文功能的封装类，而ContextImpl则是上下文功能的实现类。
-    - ContextWrapper又有三个直接的子类，ContextThemeWrapper、Service和Application。其中，ContextThemeWrapper是一个带主题的封装类，而它有一个直接子类就是Activity，所以Activity和Service以及Application的Context是不一样的，只有Activity需要主题，Service不需要主题。
-- Context下有哪些子类，主要是干什么的？
-    - Context一共有三种类型，分别是Application、Activity和Service。
-    - 这三个类虽然分别各种承担着不同的作用，但它们都属于Context的一种，而它们具体Context的功能则是由ContextImpl类去实现的，因此在绝大多数场景下，Activity、Service和Application这三种类型的Context都是可以通用的。
-    - 不过有几种场景比较特殊，比如启动Activity，还有弹出Dialog。出于安全原因的考虑，Android是不允许Activity或Dialog凭空出现的，一个Activity的启动必须要建立在另一个Activity的基础之上，也就是以此形成的返回栈。而Dialog则必须在一个Activity上面弹出（除非是系统级别吐司），因此在这种场景下，我们只能使用Activity类型的Context，否则将会出错。
+- `Context`是什么？
+    - `Context`是一个抽象基类。在翻译为上下文，也可以理解为环境，是提供一些程序的运行环境基础信息。
+- `Context`有哪些类型，分别作用是什么？
+    - `Context`下有两个子类，`ContextWrapper`是上下文功能的封装类，而`ContextImpl`则是上下文功能的实现类。
+    - `ContextWrapper`又有三个直接的子类，`ContextThemeWrapper`、`Service`和`Application`。其中，`ContextThemeWrapper`是一个带主题的封装类，而它有一个直接子类就是`Activity`，所以`Activity`和`Service`以及`Application`的Context是不一样的，只有Activity需要主题，Service不需要主题。
+- `Context`下有哪些子类，主要是干什么的？
+    - Context一共有三种类型，分别是`Application`、`Activity`和`Service`。
+    - 这三个类虽然分别各种承担着不同的作用，但它们都属于Context的一种，而它们具体`Context`的功能则是由`ContextImpl`类去实现的，因此在绝大多数场景下，Activity、Service和Application这三种类型的Context都是可以通用的。
+    - 不过有几种场景比较特殊，比如启动`Activity`，还有弹出`Dialog`。出于安全原因的考虑，Android是不允许Activity或Dialog凭空出现的，一个Activity的启动必须要建立在另一个`Activity`的基础之上，也就是以此形成的返回栈。而`Dialog`则必须在一个`Activity`上面弹出（除非是系统级别吐司），因此在这种场景下，我们只能使用`Activity`类型的`Context`，否则将会出错。
 
 
 
 ### 02.Activity可以new创建吗
 - **Activity mActivity =new Activity()**
     - 不能
-- 作为Android开发者，不知道你有没有思考过这个问题，Activity可以new吗？
+- 作为`Android`开发者，不知道你有没有思考过这个问题，`Activity`可以`new`吗？
     - Android的应用程序开发采用JAVA语言，Activity本质上也是一个对象，那上面的写法有什么问题呢？
     - 估计很多人说不清道不明。Android程序不像Java程序一样，随便创建一个类，写个main()方法就能运行。
-    - **Android应用模型是基于组件的应用设计模式，组件的运行要有一个完整的Android工程环境**。
-    - 在这个环境下，Activity、Service等系统组件才能够正常工作，而这些组件并不能采用普通的Java对象创建方式，new一下就能创建实例了，而是要有它们各自的上下文环境，也就是我们这里讨论的Context。
+    - **`Android`应用模型是基于组件的应用设计模式，组件的运行要有一个完整的Android工程环境**。
+    - 在这个环境下，`Activity`、`Service`等系统组件才能够正常工作，而这些组件并不能采用普通的Java对象创建方式，new一下就能创建实例了，而是要有它们各自的上下文环境，也就是我们这里讨论的Context。
     - 可以这样讲，Context是维持Android程序中各组件能够正常工作的一个核心功能类。
 
 
 ### 03.Context到底是什么
 #### 3.1 Context上下文
-- Context的中文翻译为：语境;上下文;背景;环境。
+- `Context`的中文翻译为：语境;上下文;背景;环境。
     - 在开发中我们经常说称之为“上下文”，那么这个“上下文”到底是指什么意思呢？
     - 在语文中，我们可以理解为语境，在程序中，我们可以理解为当前对象在程序中所处的一个环境，一个与系统交互的过程。比如微信聊天，此时的“环境”是指聊天的界面以及相关的数据请求与传输，Context在加载资源、启动Activity、获取系统服务、创建View等操作都要参与。
-- 那Context到底是什么呢？
-    - 一个Activity就是一个Context，一个Service也是一个Context。Android程序员把“场景”抽象为Context类，他们认为用户和操作系统的每一次交互都是一个场景，比如打电话、发短信，这些都是一个有界面的场景，还有一些没有界面的场景，比如后台运行的服务（Service）。
+- 那`Context`到底是什么呢？
+    - 一个`Activity`就是一个`Context`，一个`Service`也是一个`Context`。Android程序员把“场景”抽象为Context类，他们认为用户和操作系统的每一次交互都是一个场景，比如打电话、发短信，这些都是一个有界面的场景，还有一些没有界面的场景，比如后台运行的服务（Service）。
     - 一个应用程序可以认为是一个工作环境，用户在这个环境中会切换到不同的场景，这就像一个前台秘书，她可能需要接待客人，可能要打印文件，还可能要接听客户电话，而这些就称之为不同的场景，前台秘书可以称之为一个应用程序。
-- Context是一个抽象类，那么肯定有他的实现类咯，我们在Context的源码中通过IDE可以查看到他的子类最终可以得到如下关系图：
+- `Context`是一个抽象类，那么肯定有他的实现类咯，我们在Context的源码中通过IDE可以查看到他的子类最终可以得到如下关系图：
     - ![](http://upload-images.jianshu.io/upload_images/1187237-1b4c0cd31fd0193f.png)
 
 
 #### 3.2 Context两个子类
-- Context类本身是一个纯abstract类，它有两个具体的实现子类：
+- `Context`类本身是一个纯`abstract`类，它有两个具体的实现子类：
     - ContextImpl和ContextWrapper。
-- 其中ContextWrapper类，如其名所言，这只是一个包装而已
+- 其中`ContextWrapper`类，如其名所言，这只是一个包装而已
     - ContextWrapper构造函数中必须包含一个真正的Context引用，同时ContextWrapper中提供了attachBaseContext（）用于给ContextWrapper对象中指定真正的Context对象，调用ContextWrapper的方法都会被转向其所包含的真正的Context对象。
     - ContextThemeWrapper类，如其名所言，其内部包含了与主题（Theme）相关的接口这里所说的主题就是指在AndroidManifest.xml中通过android：theme为Application元素或者Activity元素指定的主题。当然，只有Activity才需要主题，Service是不需要主题的，因为Service是没有界面的后台场景，所以Service直接继承于ContextWrapper，Application同理。
-- ContextImpl类则真正实现了Context中的所有函数
-    - 应用程序中所调用的各种Context类的方法，其实现均来自于该类。一句话总结：**Context的两个子类分工明确，其中ContextImpl是Context的具体实现类，ContextWrapper是Context的包装类。**Activity，Application，Service虽都继承自ContextWrapper（Activity继承自ContextWrapper的子类ContextThemeWrapper），但它们初始化的过程中都会创建ContextImpl对象，由ContextImpl实现Context中的方法。
+- `ContextImpl`类则真正实现了`Context`中的所有函数
+    - 应用程序中所调用的各种Context类的方法，其实现均来自于该类。一句话总结：**Context的两个子类分工明确，其中ContextImpl是Context的具体实现类，ContextWrapper是Context的包装类。
+    - **Activity，Application，Service虽都继承自ContextWrapper（Activity继承自ContextWrapper的子类ContextThemeWrapper），但它们初始化的过程中都会创建`ContextImpl`对象，由`ContextImpl`实现`Context`中的方法。
 
 
 
 ### 04.生动形象的理解Context
-- 将Context理解为“上下文”或者“场景”，如果你仍然觉得很抽象，不好理解。
+- 将`Context`理解为“上下文”或者“场景”，如果你仍然觉得很抽象，不好理解。
     - 在这里我给出一个可能不是很恰当的比喻，希望有助于大家的理解：一个Android应用程序，可以理解为一部电影或者一部电视剧，Activity，Service，Broadcast Receiver，Content Provider这四大组件就好比是这部戏里的四个主角：胡歌，霍建华，诗诗，Baby。
     - 他们是由剧组（系统）一开始就定好了的，整部戏就是由这四位主演领衔担纲的，所以这四位主角并不是大街上随随便便拉个人（new 一个对象）都能演的。
     - 有了演员当然也得有摄像机拍摄啊，他们必须通过镜头（Context）才能将戏传递给观众，这也就正对应说四大组件（四位主角）必须工作在Context环境下（摄像机镜头）。
@@ -74,8 +75,8 @@
 
 
 ### 05.Context能干什么
-- Context到底可以实现哪些功能呢？
-    - 这个就实在是太多了，弹出Toast、启动Activity、启动Service、发送广播、操作数据库等等都需要用到Context。
+- `Context`到底可以实现哪些功能呢？
+    - 这个就实在是太多了，弹出`Toast`、启动`Activity`、启动`Service`、发送广播、操作数据库等等都需要用到`Context`。
     ``` java
     TextView tv = new TextView(getContext());
     ListAdapter adapter = new SimpleCursorAdapter(getApplicationContext(), ...);
@@ -111,7 +112,8 @@
 - **getApplication()和getApplicationContext()**
     - 上面说到获取当前Application对象用getApplicationContext，不知道你有没有联想到getApplication()，这两个方法有什么区别？相信这个问题会难倒不少开发者。
     - ![](http://upload-images.jianshu.io/upload_images/1187237-593b912ecd199046.png)
-    - 程序是不会骗人的，我们通过上面的代码，打印得出两者的内存地址都是相同的，看来它们是同一个对象。其实这个结果也很好理解，因为前面已经说过了，Application本身就是一个Context，所以这里获取getApplicationContext()得到的结果就是Application本身的实例。那么问题来了，既然这两个方法得到的结果都是相同的，那么Android为什么要提供两个功能重复的方法呢？实际上这两个方法在作用域上有比较大的区别。getApplication()方法的语义性非常强，一看就知道是用来获取Application实例的，**但是这个方法只有在Activity和Service中才能调用的到**。那么也许在绝大多数情况下我们都是在Activity或者Service中使用Application的，但是如果在一些其它的场景，比如BroadcastReceiver中也想获得Application的实例，这时就可以借助getApplicationContext()方法了。
+    - 程序是不会骗人的，我们通过上面的代码，打印得出两者的内存地址都是相同的，看来它们是同一个对象。其实这个结果也很好理解，因为前面已经说过了，Application本身就是一个Context，所以这里获取getApplicationContext()得到的结果就是Application本身的实例。
+    - 那么问题来了，既然这两个方法得到的结果都是相同的，那么Android为什么要提供两个功能重复的方法呢？实际上这两个方法在作用域上有比较大的区别。getApplication()方法的语义性非常强，一看就知道是用来获取Application实例的，**但是这个方法只有在Activity和Service中才能调用的到**。那么也许在绝大多数情况下我们都是在Activity或者Service中使用Application的，但是如果在一些其它的场景，比如BroadcastReceiver中也想获得Application的实例，这时就可以借助getApplicationContext()方法了。
     ``` java
     public class MyReceiver extends BroadcastReceiver{
       @Override
@@ -137,155 +139,62 @@
 
 
 ### 10.Application的Context分析
-- 首先就从ActivityThread.main方法开始看一下Application的创建流程。
-    ```
+- 首先就从`ActivityThread.main`方法开始看一下`Application`的创建流程。
+    ``` java
     public static void main(String[] args) {
-        ...
         ActivityThread thread = new ActivityThread();
         thread.attach(false);
-        ...
     }
     ```
-- 这里我们发现在方法体中我们创建了一个ActivityThread对象并执行了attach方法：
-    - 这里看一下重点实现，我们可以发现在方法体中调用了ActivityManagerNative.getDefault().attachApplication(mAppThread)，这里就是一个Binder进程间通讯，其实上执行的是ActivityManagerService.attachApplication方法
-    ```
+- 这里我们发现在方法体中我们创建了一个`ActivityThread`对象并执行了`attach`方法：
+    - 这里看一下重点实现，我们可以发现在方法体中调用了`ActivityManagerNative.getDefault().attachApplication(mAppThread)`，这里就是一个`Binder`进程间通讯，其实上执行的是`ActivityManagerService.attachApplication`方法
+    ``` java
     private void attach(boolean system) {
-        sCurrentActivityThread = this;
-        mSystemThread = system;
         if (!system) {
-            ViewRootImpl.addFirstDrawHandler(new Runnable() {
-                @Override
-                public void run() {
-                    ensureJitEnabled();
-                }
-            });
-            android.ddm.DdmHandleAppName.setAppName("<pre-initialized>",
-                                                    UserHandle.myUserId());
             RuntimeInit.setApplicationObject(mAppThread.asBinder());
             final IActivityManager mgr = ActivityManagerNative.getDefault();
             try {
                 mgr.attachApplication(mAppThread);
             } catch (RemoteException ex) {
-                // Ignore
             }
-            // Watch for getting close to heap limit.
-            BinderInternal.addGcWatcher(new Runnable() {
-                @Override public void run() {
-                    if (!mSomeActivitiesChanged) {
-                        return;
-                    }
-                    Runtime runtime = Runtime.getRuntime();
-                    long dalvikMax = runtime.maxMemory();
-                    long dalvikUsed = runtime.totalMemory() - runtime.freeMemory();
-                    if (dalvikUsed > ((3*dalvikMax)/4)) {
-                        if (DEBUG_MEMORY_TRIM) Slog.d(TAG, "Dalvik max=" + (dalvikMax/1024)
-                                + " total=" + (runtime.totalMemory()/1024)
-                                + " used=" + (dalvikUsed/1024));
-                        mSomeActivitiesChanged = false;
-                        try {
-                            mgr.releaseSomeActivities(mAppThread);
-                        } catch (RemoteException e) {
-                        }
-                    }
-                }
-            });
-        } else {
-          ...  
-        }
+        } 
     }
     ```
-- 看一下ActivityManagerService.attachApplication方法的具体实现。
-    ```
+- 看一下`ActivityManagerService.attachApplication`方法的具体实现。
+    ``` java
     @Override
     public final void attachApplication(IApplicationThread thread) {
         synchronized (this) {
             int callingPid = Binder.getCallingPid();
             final long origId = Binder.clearCallingIdentity();
             attachApplicationLocked(thread, callingPid);
-            Binder.restoreCallingIdentity(origId);
         }
     }
     ```
-- 然后这里面又调用了attachApplicationLocked方法：
-    ```
+- 然后这里面又调用了`attachApplicationLocked`方法：
+    ``` java
     private final boolean attachApplicationLocked(IApplicationThread 	  thread, int pid) {
-    
-        ...
         thread.bindApplication(processName, appInfo, providers, app.instrumentationClass, profilerInfo, app.instrumentationArguments, app.instrumentationWatcher,
-    app.instrumentationUiAutomationConnection, testMode, enableOpenGlTrace, isRestrictedBackupMode || !normalMode, app.persistent, new Configuration(mConfiguration), app.compat,
-    getCommonServicesLocked(app.isolated),
-    mCoreSettingsObserver.getCoreSettingsLocked());
-        ...
+    }
     ```
-- 来看一下ApplicationThread的bindApplication的实现：
-    ```
-    public final void bindApplication(String processName, ApplicationInfo appInfo,
-            List<ProviderInfo> providers, ComponentName instrumentationName,
-            ProfilerInfo profilerInfo, Bundle instrumentationArgs,
-            IInstrumentationWatcher instrumentationWatcher,
-            IUiAutomationConnection instrumentationUiConnection, int debugMode,
-            boolean enableOpenGlTrace, boolean isRestrictedBackupMode, boolean persistent,
-            Configuration config, CompatibilityInfo compatInfo, Map<String, IBinder> services,
-            Bundle coreSettings) {
-    
-        if (services != null) {
-            // Setup the service cache in the ServiceManager
-            ServiceManager.initServiceCache(services);
-        }
-    
-        setCoreSettings(coreSettings);
-
-        IPackageManager pm = getPackageManager();
-        android.content.pm.PackageInfo pi = null;
-        try {
-            pi = pm.getPackageInfo(appInfo.packageName, 0, UserHandle.myUserId());
-        } catch (RemoteException e) {
-        }
-        if (pi != null) {
-            boolean sharedUserIdSet = (pi.sharedUserId != null);
-            boolean processNameNotDefault =
-            (pi.applicationInfo != null &&
-             !appInfo.packageName.equals(pi.applicationInfo.processName));
-            boolean sharable = (sharedUserIdSet || processNameNotDefault);
-    
-            // Tell the VMRuntime about the application, unless it is shared
-            // inside a process.
-            if (!sharable) {
-                VMRuntime.registerAppInfo(appInfo.packageName, appInfo.dataDir,
-                                        appInfo.processName);
-            }
-        }
-    
+- 来看一下`ApplicationThread`的`bindApplication`的实现：
+    ``` java
+    public final void bindApplication() {
         AppBindData data = new AppBindData();
         data.processName = processName;
         data.appInfo = appInfo;
-        data.providers = providers;
-        data.instrumentationName = instrumentationName;
-        data.instrumentationArgs = instrumentationArgs;
-        data.instrumentationWatcher = instrumentationWatcher;
-        data.instrumentationUiAutomationConnection = instrumentationUiConnection;
-        data.debugMode = debugMode;
-        data.enableOpenGlTrace = enableOpenGlTrace;
-        data.restrictedBackupMode = isRestrictedBackupMode;
-        data.persistent = persistent;
-        data.config = config;
-        data.compatInfo = compatInfo;
-        data.initProfilerInfo = profilerInfo;
         sendMessage(H.BIND_APPLICATION, data);
     }
     ```
-- 最后调用了ActivityThread.sendMessage()...
-    ```
+- 最后调用了`ActivityThread.sendMessage()`做了什么
+    ``` java
     private void sendMessage(int what, Object obj) {
         sendMessage(what, obj, 0, 0, false);
     }
     ```
-- 看一下其sendMessage的重载方法：
-    ```
+- 看一下其`sendMessage`的重载方法：
+    ``` java
     private void sendMessage(int what, Object obj, int arg1, int arg2, boolean async) {
-            if (DEBUG_MESSAGES) Slog.v(
-                TAG, "SCHEDULE " + what + " " + mH.codeToString(what)
-                + ": " + arg1 + " / " + obj);
             Message msg = Message.obtain();
             msg.what = what;
             msg.obj = obj;
@@ -297,167 +206,59 @@
             mH.sendMessage(msg);
         }
     ```
-- 可以发现这里调用了mH的sendMessage方法
-    - 最后通过Handler的异步消息机制被mH的handleMessage方法处理，然后根据Message.what选择处理分支，最终调用了ActivityThread的handleBindApplication方法。
-    - 这个方法的方法体比较长，我们挑重点的看，可以看到方法体中系统通过反射机制创建了Instrumentation对象，并执行了init方法，执行了Insrtumentation对象的初始化。
-    ```
+- 可以发现这里调用了`mH`的`sendMessage`方法
+    - 最后通过`Handler`的异步消息机制被mH的`handleMessage`方法处理，然后根据`Message.what`选择处理分支，最终调用了`ActivityThread`的`handleBindApplication`方法。
+    - 这个方法的方法体比较长，我们挑重点的看，可以看到方法体中系统通过反射机制创建了`Instrumentation`对象，并执行了`init`方法，执行了`Insrtumentation`对象的初始化。
+    ``` java
     private void handleBindApplication(AppBindData data) {
             ...
             // 创建Instrumentation
             if (data.instrumentationName != null) {
-                InstrumentationInfo ii = null;
-                try {
-                    ii = appContext.getPackageManager().
-                        getInstrumentationInfo(data.instrumentationName, 0);
-                } catch (PackageManager.NameNotFoundException e) {
-                }
-                if (ii == null) {
-                    throw new RuntimeException(
-                        "Unable to find instrumentation info for: "
-                        + data.instrumentationName);
-                }
-    
-                mInstrumentationPackageName = ii.packageName;
-                mInstrumentationAppDir = ii.sourceDir;
-                mInstrumentationSplitAppDirs = ii.splitSourceDirs;
-                mInstrumentationLibDir = ii.nativeLibraryDir;
-                mInstrumentedAppDir = data.info.getAppDir();
-                mInstrumentedSplitAppDirs = data.info.getSplitAppDirs();
-                mInstrumentedLibDir = data.info.getLibDir();
-    
-                ApplicationInfo instrApp = new ApplicationInfo();
-                instrApp.packageName = ii.packageName;
-                instrApp.sourceDir = ii.sourceDir;
-                instrApp.publicSourceDir = ii.publicSourceDir;
-                instrApp.splitSourceDirs = ii.splitSourceDirs;
-                instrApp.splitPublicSourceDirs = ii.splitPublicSourceDirs;
-                instrApp.dataDir = ii.dataDir;
-                instrApp.nativeLibraryDir = ii.nativeLibraryDir;
-                LoadedApk pi = getPackageInfo(instrApp, data.compatInfo,
-                        appContext.getClassLoader(), false, true, false);
-                ContextImpl instrContext = ContextImpl.createAppContext(this, pi);
-    
                 try {
                     java.lang.ClassLoader cl = instrContext.getClassLoader();
                     mInstrumentation = (Instrumentation)
                         cl.loadClass(data.instrumentationName.getClassName()).newInstance();
                 } catch (Exception e) {
-                    throw new RuntimeException(
-                        "Unable to instantiate instrumentation "
-                        + data.instrumentationName + ": " + e.toString(), e);
                 }
     
                 mInstrumentation.init(this, instrContext, appContext,
                        new ComponentName(ii.packageName, ii.name), data.instrumentationWatcher,
                        data.instrumentationUiAutomationConnection);
-    
-                if (mProfiler.profileFile != null && !ii.handleProfiling
-                        && mProfiler.profileFd == null) {
-                    mProfiler.handlingProfiling = true;
-                    File file = new File(mProfiler.profileFile);
-                    file.getParentFile().mkdirs();
-                    Debug.startMethodTracing(file.toString(), 8 * 1024 * 1024);
-                }
-    
             } else {
                 mInstrumentation = new Instrumentation();
             }
-    
-    		...
-    		/ If the app is being launched for full backup or restore, bring it up in
-                // a restricted environment with the base application class.
-                Application app = data.info.makeApplication(data.restrictedBackupMode, null);
-                mInitialApplication = app;
-    		...
-            try {
-               mInstrumentation.onCreate(data.instrumentationArgs);
-             }
-             catch (Exception e) {
-                    throw new RuntimeException(
-                        "Exception thrown in onCreate() of "
-                        + data.instrumentationName + ": " + e.toString(), e);
-                }
-    
-                try {
-                    mInstrumentation.callApplicationOnCreate(app);
-                } catch (Exception e) {
-                    if (!mInstrumentation.onException(app, e)) {
-                        throw new RuntimeException(
-                            "Unable to create application " + app.getClass().getName()
-                            + ": " + e.toString(), e);
-                    }
-                }
-            } finally {
-                StrictMode.setThreadPolicy(savedPolicy);
-            }
         }
     ```
-- 然后我们调用了LockedApk.makeApplication方法创建了Application对象，我们来看一下其具体的实现逻辑：
-    - 可以发现这里也是以反射的机制创建了Application对象，并创建了一个ContextImpl对象，并将Application与ContextImpl建立关联。。。
-    ```
+- 然后我们调用了`LockedApk.makeApplication`方法创建了`Application`对象，我们来看一下其具体的实现逻辑：
+    - 可以发现这里也是以反射的机制创建了`Application`对象，并创建了一个`ContextImpl`对象，并将`Application`与`ContextImpl`建立关联。。。
+    ``` java
     public Application makeApplication(boolean forceDefaultAppClass,
                 Instrumentation instrumentation) {
-            if (mApplication != null) {
-                return mApplication;
-            }
-    
-            Application app = null;
-    
-            String appClass = mApplicationInfo.className;
-            if (forceDefaultAppClass || (appClass == null)) {
-                appClass = "android.app.Application";
-            }
-    
             try {
-                java.lang.ClassLoader cl = getClassLoader();
-                if (!mPackageName.equals("android")) {
-                    initializeJavaContextClassLoader();
-                }
+                //将`Application`与`ContextImpl`建立关联
                 ContextImpl appContext = ContextImpl.createAppContext(mActivityThread, this);
                 app = mActivityThread.mInstrumentation.newApplication(
                         cl, appClass, appContext);
                 appContext.setOuterContext(app);
             } catch (Exception e) {
-                if (!mActivityThread.mInstrumentation.onException(app, e)) {
-                    throw new RuntimeException(
-                        "Unable to instantiate application " + appClass
-                        + ": " + e.toString(), e);
-                }
+
             }
             mActivityThread.mAllApplications.add(app);
             mApplication = app;
     
             if (instrumentation != null) {
                 try {
+                    //执行application的OnCreate生命周期
                     instrumentation.callApplicationOnCreate(app);
                 } catch (Exception e) {
-                    if (!instrumentation.onException(app, e)) {
-                        throw new RuntimeException(
-                            "Unable to create application " + app.getClass().getName()
-                            + ": " + e.toString(), e);
-                    }
                 }
             }
-    
-            // Rewrite the R 'constants' for all library apks.
-            SparseArray<String> packageIdentifiers = getAssets(mActivityThread)
-                    .getAssignedPackageIdentifiers();
-            final int N = packageIdentifiers.size();
-            for (int i = 0; i < N; i++) {
-                final int id = packageIdentifiers.keyAt(i);
-                if (id == 0x01 || id == 0x7f) {
-                    continue;
-                }
-    
-                rewriteRValues(getClassLoader(), packageIdentifiers.valueAt(i), id);
-            }
-    
             return app;
         }
     ```
-- 继续回到我们的ActivityThread的handleBindApplication方法
-    - 在创建了Application对象之后我们调用了Instrumentation的onCreate方法，然后调用了Instrumentation的callApplicationOnCreate方法，我们来看一下其具体实现：
-    ```
+- 继续回到我们的`ActivityThread`的`handleBindApplication`方法，然后定位到`LockedApk.makeApplication`
+    - 在创建了`Application`对象之后我们调用了`Instrumentation`的`onCreate`方法，然后调用了`Instrumentation`的`callApplicationOnCreate`方法，我们来看一下其具体实现：
+    ``` java
     public void callApplicationOnCreate(Application app) {
             app.onCreate();
         }
@@ -472,11 +273,11 @@
 
 
 ### 11.Activity的Context分析
-- Activity的具体创建过程是在ActivityThread的performLaunchActivity，来看一下
-    - 这里简要说明一下，Activity也是系统通过反射机制创建的，然后我们通过LockedApk.makeApplication创建一个Application
-    - 通过查看源码我们知道若这时候LockedApk中的mApplication不为空则直接返回当前的mApplication又因为当我们创建应用进程的时候Application已经被创建，所以当创建Activity的时候这时候Application肯定不为空，所以这时候返回的就是应用进程创建的时候创建的Application，这也从侧面说明了一个应用进程对应着一个Application。
-    - 然后我们通过createBaseContextForActivity创建了一个ContextImpl对象。
-    ```
+- `Activity`的具体创建过程是在`ActivityThread`的`performLaunchActivity`，来看一下
+    - 这里简要说明一下，`Activity`也是系统通过反射机制创建的，然后我们通过`LockedApk.makeApplication`创建一个`Application`
+    - 通过查看源码我们知道若这时候`LockedApk`中的`mApplication`不为空则直接返回当前的`mApplication`又因为当我们创建应用进程的时候`Application`已经被创建，所以当创建`Activity`的时候这时候`Application`肯定不为空，所以这时候返回的就是应用进程创建的时候创建的`Application`，这也从侧面说明了一个应用进程对应着一个Application。
+    - 然后我们通过`createBaseContextForActivity`创建了一个ContextImpl对象。
+    ``` java
     private Activity performLaunchActivity(ActivityClientRecord r, Intent customIntent) {
         ...
         Activity activity = null;
@@ -484,18 +285,7 @@
             java.lang.ClassLoader cl = r.packageInfo.getClassLoader();
             activity = mInstrumentation.newActivity(
                     cl, component.getClassName(), r.intent);
-            StrictMode.incrementExpectedActivityCount(activity.getClass());
-            r.intent.setExtrasClassLoader(cl);
-            r.intent.prepareToEnterProcess();
-            if (r.state != null) {
-                r.state.setClassLoader(cl);
-            }
         } catch (Exception e) {
-            if (!mInstrumentation.onException(activity, e)) {
-                throw new RuntimeException(
-                    "Unable to instantiate activity " + component
-                    + ": " + e.toString(), e);
-            }
         }
     
         try {
@@ -503,91 +293,28 @@
     		...
             if (activity != null) {
                 Context appContext = createBaseContextForActivity(r, activity);
-                CharSequence title = r.activityInfo.loadLabel(appContext.getPackageManager());
-                Configuration config = new Configuration(mCompatConfiguration);
-                if (DEBUG_CONFIGURATION) Slog.v(TAG, "Launching activity "
-                        + r.activityInfo.name + " with config " + config);
+                //调用activity的很重要一个方法 attach
                 activity.attach(appContext, this, getInstrumentation(), r.token,
                         r.ident, app, r.intent, r.activityInfo, title, r.parent,
                         r.embeddedID, r.lastNonConfigurationInstances, config,
                         r.referrer, r.voiceInteractor);
-    
-                if (customIntent != null) {
-                    activity.mIntent = customIntent;
-                }
-                r.lastNonConfigurationInstances = null;
-                activity.mStartedActivity = false;
-                int theme = r.activityInfo.getThemeResource();
-                if (theme != 0) {
-                    activity.setTheme(theme);
-                }
-    
-                activity.mCalled = false;
-                if (r.isPersistable()) {
-                    mInstrumentation.callActivityOnCreate(activity, r.state, r.persistentState);
-                } else {
-                    mInstrumentation.callActivityOnCreate(activity, r.state);
-                }
-                if (!activity.mCalled) {
-                    throw new SuperNotCalledException(
-                        "Activity " + r.intent.getComponent().toShortString() +
-                        " did not call through to super.onCreate()");
-                }
-                r.activity = activity;
-                r.stopped = true;
-                if (!r.activity.mFinished) {
-                    activity.performStart();
-                    r.stopped = false;
-                }
-                if (!r.activity.mFinished) {
-                    if (r.isPersistable()) {
-                        if (r.state != null || r.persistentState != null) {
-                            mInstrumentation.callActivityOnRestoreInstanceState(activity, r.state,
-                                    r.persistentState);
-                        }
-                    } else if (r.state != null) {
-                        mInstrumentation.callActivityOnRestoreInstanceState(activity, r.state);
-                    }
-                }
                 ...
+            }
         return activity;
     }
     ```
-- 来看一下createBaseContextForActivity方法的源码
-    - 可以发现这里创建了一个ContextImpl对象，并通过ContextImpl的setOuterContext方法，让该ContextImpl持有了Activity的引用
-    ```
+- 来看一下`createBaseContextForActivity`方法的源码
+    - 可以发现这里创建了一个`ContextImpl`对象，并通过`ContextImpl`的`setOuterContext`方法，让该`ContextImpl`持有了`Activity`的引用
+    ``` java
     private Context createBaseContextForActivity(ActivityClientRecord r, final Activity activity) {
-        int displayId = Display.DEFAULT_DISPLAY;
-        try {
-            displayId = ActivityManagerNative.getDefault().getActivityDisplayId(r.token);
-        } catch (RemoteException e) {
-        }
-    
         ContextImpl appContext = ContextImpl.createActivityContext(
                 this, r.packageInfo, displayId, r.overrideConfig);
         appContext.setOuterContext(activity);
         Context baseContext = appContext;
-    
-        final DisplayManagerGlobal dm = DisplayManagerGlobal.getInstance();
-        // For debugging purposes, if the activity's package name contains the value of
-        // the "debug.use-second-display" system property as a substring, then show
-        // its content on a secondary display if there is one.
-        String pkgName = SystemProperties.get("debug.second-display.pkg");
-        if (pkgName != null && !pkgName.isEmpty()
-                && r.packageInfo.mPackageName.contains(pkgName)) {
-            for (int id : dm.getDisplayIds()) {
-                if (id != Display.DEFAULT_DISPLAY) {
-                    Display display =
-                            dm.getCompatibleDisplay(id, appContext.getDisplayAdjustments(id));
-                    baseContext = appContext.createDisplayContext(display);
-                    break;
-                }
-            }
-        }
         return baseContext;
     }
     ```
-- 继续往下看，调用了activity.attach方法，查看一下该方法的实现逻辑：
+- 继续往下看，调用了`activity.attach`方法，查看一下该方法的实现逻辑：
     ```
     final void attach(Context context, ActivityThread aThread,
             Instrumentation instr, IBinder token, int ident,
@@ -600,39 +327,7 @@
         mFragments.attachHost(null /*parent*/);
     
         mWindow = new PhoneWindow(this);
-        mWindow.setCallback(this);
-        mWindow.setOnWindowDismissedCallback(this);
-        mWindow.getLayoutInflater().setPrivateFactory(this);
-        if (info.softInputMode != WindowManager.LayoutParams.SOFT_INPUT_STATE_UNSPECIFIED) {
-            mWindow.setSoftInputMode(info.softInputMode);
-        }
-        if (info.uiOptions != 0) {
-            mWindow.setUiOptions(info.uiOptions);
-        }
-        mUiThread = Thread.currentThread();
-    
-        mMainThread = aThread;
-        mInstrumentation = instr;
-        mToken = token;
-        mIdent = ident;
-        mApplication = application;
-        mIntent = intent;
-        mReferrer = referrer;
-        mComponent = intent.getComponent();
-        mActivityInfo = info;
-        mTitle = title;
-        mParent = parent;
-        mEmbeddedID = id;
-        mLastNonConfigurationInstances = lastNonConfigurationInstances;
-        if (voiceInteractor != null) {
-            if (lastNonConfigurationInstances != null) {
-                mVoiceInteractor = lastNonConfigurationInstances.voiceInteractor;
-            } else {
-                mVoiceInteractor = new VoiceInteractor(voiceInteractor, this, this,
-                        Looper.myLooper());
-            }
-        }
-    
+
         mWindow.setWindowManager(
                 (WindowManager)context.getSystemService(Context.WINDOW_SERVICE),
                 mToken, mComponent.flattenToString(),
@@ -644,12 +339,12 @@
         mCurrentConfig = config;
     }
     ```
-- 除了一下初始化操作之外，还调用了attachBaseContext方法，让Activity持有了ContextImpl的引用，这样就相当于Activity与ContextImpl对象相互持有了对方的引用，并且Activity是继承与Context。
+    - 除了一下初始化操作之外，还调用了`attachBaseContext`方法，让`Activity`持有了`ContextImpl`的引用，这样就相当于`Activity`与`ContextImpl`对象相互持有了对方的引用，并且`Activity`是继承与`Context`。
 - 总结：
-    - Activity中创建ContextImpl对象的具体实现在ActivityThread的performLauncherAcitivty方法中；
-    - Activity的创建伴随着ContextImpl的创建，二者相互持有对方的引用；
-    - 创建Activity --> 创建Activity相关ContextImpl对象；
-    - 创建应用进程 --> 创建Application --> 创建Application相关ContextImpl对象；
+    - `Activity`中创建`ContextImpl`对象的具体实现在`ActivityThread`的`performLauncherActivity`方法中；
+    - `Activity`的创建伴随着`ContextImpl`的创建，二者相互持有对方的引用；
+    - 创建`Activity` --> 创建`Activity`相关`ContextImpl`对象；
+    - 创建应用进程 --> 创建`Application` --> 创建`Application`相关`ContextImpl`对象；
 
 
 
