--- a/Read/ReadKotlinWiki/02.高阶拓展/02.扩展函数和属性介绍.md
+++ b/Read/ReadKotlinWiki/02.高阶拓展/02.扩展函数和属性介绍.md
@@ -1,6 +1,8 @@
 #### 目录介绍
 - 01.高阶扩展函数概念
 - 02.理解扩展函数
+- 03.理解拓展属性
+- 04.拓展函数的思考
 - 05.Standard.kt拓展函数
 
 
@@ -26,87 +28,17 @@
         }
     }
     ```
-- 从上面可以看到学生仅仅只有一种学习能力，现在我们对其进行扩展，拥有吃饭的能力：
+    - 从上面可以看到学生仅仅只有一种学习能力，现在我们对其进行扩展，拥有吃饭的能力：
     ``` kotlin
     inline fun Student.eat(){
         println("在吃饭")
     }
     ```
-- 调用，下面这个叫做拓展函数
+    - 调用，下面这个叫做拓展函数
     ``` kotlin
     val stu = Student()
     stu.study()
     stu.eat()
-    ```
-
-
-
-### 05.Standard.kt拓展函数
-#### 5.1 了解定义作用和场景
-- 有哪些比较常用拓展函数
-    - run、with、let、also与apply
-- 定义是什么
-    - 一个作用域函数
-- 作用是什么
-    - 定义一个变量在特定的作用区域范围内，避免一些null判断的操作
-- 应用场景说明
-    - 明确一个变量所处特定的作用区范围内可以用，针对null统一做非空判断逻辑
-
-
-#### 5.2 每个函数的作用
-- 需要返回自己本身
-    - also函数
-        - 类似let函数，但区别在于返回值，返回值 = 传入的对象的本身
-    - apply函数
-        - 与run函数类似，但区别在于返回值：run函数返回最后一行的值 / 表达式，apply函数返回传入的对象的本身
-        - 应用场景：对象实例初始化时需要对对象中的属性进行赋值 & 返回该对象
-- 不需要返回自己本身
-    - let函数
-        - let()的定义是这样的，默认当前这个对象作为闭包的it参数，返回值是函数里面最后一行，或者指定return
-    - with函数
-        - 调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
-        - 应用场景：需要调用同一个对象的多个方法 / 属性
-    - run函数
-        - 结合了let、with两个函数的作用，即：调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
-        - 定义一个变量在特定作用域内，统一做判空处理
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-### 01.扩展函数
-- 扩展函数用于为一个类增加一种新的行为，这是为缺少有用函数的类进行扩展的途径。扩展函数的用途就类似于在 Java 中实现的静态工具方法。
-    - 而在 Kotlin 中使用扩展函数的一个优势就是我们不需要在调用方法的时候把整个对象当作参数传入，扩展函数表现得就像是属于这个类本身的一样，可以使用 this 关键字并直接调用所有 public 方法
-    - 扩展函数并不允许你打破它的封装性，和在类内部定义的方法不同的是，扩展函数不能访问私有的或是受保护的成员
-- 扩展函数的声明
-    ```kotlin
-    //为 String 类声明一个扩展函数 lastChar() ，用于返回字符串的最后一个字符
-    //get方法是 String 类的内部方法，length 是 String 类的内部成员变量，在此处可以直接调用
-    fun String.lastChar() = get(length - 1)
-    
-    //为 Int 类声明一个扩展函数 doubleValue() ，用于返回其两倍值
-    //this 关键字代表了 Int 值本身
-    fun Int.doubleValue() = this * 2
-    ```
-- 之后，我们就可以像调用类本身内部声明的方法一样，直接调用扩展函数
-    ```kotlin
-    fun main(args: Array<String>) {
-        val name = "leavesC"
-        println("\"leavesC\" lastChar is: " + name.lastChar())
-    
-        val age = 24
-        println("24 doubleValue is: " + age.doubleValue())
-    }
     ```
 - 可以给任何类添加函数（View，Context等）。比起Java的继承机制，更加简洁和优雅。
     - 举个例子，我们可以给fragment增加一个显示toast的函数：
@@ -125,11 +57,7 @@
 
 
 
-
-
-
-
-### 02.扩展属性
+### 03.理解拓展属性
 - 扩展函数也可以用于属性
     ```kotlin
     //扩展函数也可以用于属性
@@ -152,62 +80,22 @@
     ```
 
 
-
-### 03.不可重写的扩展函数
-- 看以下例子
-    - 子类 Button 重写了父类 View 的 click() 函数，此时如果声明一个 View 变量，并赋值为 Button 类型的对象，调用的 click() 函数将是 Button 类重写的方法
-    ```kotlin
-    fun main(args: Array<String>) {
-        val view: View = Button()
-        view.click() //Button clicked
-    }
-    
-    open class View {
-        open fun click() = println("View clicked")
-    }
-    
-    class Button : View() {
-        override fun click() = println("Button clicked")
-    }
-    ```
-- 对于扩展函数来说，与以上的例子却不一样。
-    - 如果基类和子类都分别定义了一个同名的扩展函数，此时要调用哪个扩展函数是由变量的静态类型来决定的，而非这个变量的运行时类型
-    ```kotlin
-    fun main(args: Array<String>) {
-        val view: View = Button()
-        view.longClick() //View longClicked
-    }
-    
-    open class View {
-        open fun click() = println("View clicked")
-    }
-    
-    class Button : View() {
-        override fun click() = println("Button clicked")
-    }
-    
-    fun View.longClick() = println("View longClicked")
-    
-    fun Button.longClick() = println("Button longClicked")
-    ```
-- 此外，如果一个类的成员函数和扩展函数有相同的签名，**成员函数会被优先使用**
-    - 扩展函数并不是真正地修改了原来的类，其底层其实是以静态导入的方式来实现的。扩展函数可以被声明在任何一个文件中，因此有个通用的实践是把一系列有关的函数放在一个新建的文件里
-    - 需要注意的是，扩展函数不会自动地在整个项目范围内生效，如果需要使用到扩展函数，需要进行导入
-
-
-### 05.拓展函数问题思考
+### 04.拓展函数的思考
+#### 4.1 语法糖实现拓展
 - Kotlin为什么能实现扩展函数和属性这样的特性？
     - 在Kotlin中要理解一些语法，只要认识到Kotlin语言最后需要编译为class字节码，Java也是编译为class执行，也就是可以大致理解为Kotlin需要转成Java一样的语法结构， Kotlin就是一种强大的语法糖而已，Java不具备的功能Kotlin也不能越界的。 
 - 那Kotlin的扩展函数怎么实现的呢？
     - 介绍一种万能的办法去理解Kotlin的语法：将Kotlin代码转化成Java语言去理解，步骤如下： 
-    - 在Android Studio中选择Tools ---> Kotlin ---> Show Kotlin Bytecode 这样就把Kotlin转化为class字节码了 
-    - class码阅读不太友好，点击左上角的Decompile就转化为Java
-- 看实际代码案例
-    - 对于扩展函数，转化为Java的时候其实就是一个静态的函数，同时这个静态函数的第一个参数就是该类的实例对象，这样把类的实例传人函数以后，函数内部就可以访问到类的公有方法。
-    - 对于扩展属性也类似，获取的扩展属性会转化为一个静态的get函数，同时这个静态函数的第一个参数就是该类的实例对象，设置的扩展属性会转化为一个静态的set函数，同时这个静态函数的第一个参数就是该类的实例对象。函数内部可以访问公有的方法和属性。 
-    - 从上面转换的源码其实可以看到扩展函数和扩展属性适用的地方和缺陷，有两点：
-        - 扩展函数和扩展属性内只能访问到类的公有方法和属性，私有的和protected是访问不了的
-        - 扩展函数不能被override，因为Java中它是静态的函数
+    - 在Android Studio中选择Tools ---> Kotlin ---> Show Kotlin Bytecode 这样就把Kotlin转化为class字节码了 。class码阅读不太友好，点击左上角的Decompile就转化为Java
+
+
+
+#### 4.2 看实际代码案例
+- 对于扩展函数，转化为Java的时候其实就是一个静态的函数，同时这个静态函数的第一个参数就是该类的实例对象，这样把类的实例传人函数以后，函数内部就可以访问到类的公有方法。
+- 对于扩展属性也类似，获取的扩展属性会转化为一个静态的get函数，同时这个静态函数的第一个参数就是该类的实例对象，设置的扩展属性会转化为一个静态的set函数，同时这个静态函数的第一个参数就是该类的实例对象。函数内部可以访问公有的方法和属性。 
+- 从上面转换的源码其实可以看到扩展函数和扩展属性适用的地方和缺陷，有两点：
+    - 扩展函数和扩展属性内只能访问到类的公有方法和属性，私有的和protected是访问不了的
+    - 扩展函数不能被override，因为Java中它是静态的函数
     ```
     class Android{
     
@@ -250,6 +138,45 @@
        }
     }
     ```
+
+
+
+### 05.Standard.kt拓展函数
+#### 5.1 了解定义作用和场景
+- 有哪些比较常用拓展函数
+    - run、with、let、also与apply
+- 定义是什么
+    - 一个作用域函数
+- 作用是什么
+    - 定义一个变量在特定的作用区域范围内，避免一些null判断的操作
+- 应用场景说明
+    - 明确一个变量所处特定的作用区范围内可以用，针对null统一做非空判断逻辑
+
+
+#### 5.2 每个函数的作用
+- 需要返回自己本身
+    - also函数
+        - 类似let函数，但区别在于返回值，返回值 = 传入的对象的本身
+    - apply函数
+        - 与run函数类似，但区别在于返回值：run函数返回最后一行的值 / 表达式，apply函数返回传入的对象的本身
+        - 应用场景：对象实例初始化时需要对对象中的属性进行赋值 & 返回该对象
+- 不需要返回自己本身
+    - let函数
+        - let()的定义是这样的，默认当前这个对象作为闭包的it参数，返回值是函数里面最后一行，或者指定return
+    - with函数
+        - 调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
+        - 应用场景：需要调用同一个对象的多个方法 / 属性
+    - run函数
+        - 结合了let、with两个函数的作用，即：调用同一个对象的多个方法 / 属性时，可以省去对象名重复，直接调用方法名 / 属性即可
+        - 定义一个变量在特定作用域内，统一做判空处理
+
+
+
+
+
+
+
+
 
 
 
