--- a/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
@@ -1,14 +1,14 @@
 #### 目录介绍
 - 01.Navigation介绍
-- 02.Navigation实战必备
-    - 2.1 学习方式
-    - 2.2 实战必备
-- 03.简单实践操作
-    - 3.1 最关键的三要素
-    - 3.2 举个通俗案例
-    - 3.3 关键的步骤流程
+    - 1.1 Nav是什么
+    - 1.2 学习方式
+    - 1.3 实战必备
+- 02.简单实践操作
+    - 2.1 最关键的三要素
+    - 2.2 举个通俗案例
+    - 2.3 关键的步骤流程
 - 04.Navigation深度理解
-    - 4.1 Navigation架构图
+    - 4.1 Navigation架构分析
     - 4.2 Navigation源码UML
     - 4.3 NavHostFragment导航容器
     - 4.4 nav_graph导航结构图
@@ -18,9 +18,15 @@
     - 5.1 设计NavHostFragment
     - 5.2 设计NavController
     - 5.3 NavDestination和Navigator
+- 06.思考和疑惑分析
+    - 6.1 能多个navController吗
+    - 6.2 返回上页面的生命周期
+
+
 
 
 ### 01.Navigation介绍
+#### 1.1 Nav是什么
 - Navigation是一个可简化Android导航的库和插件
     - 更确切的来说，Navigation是用来管理Fragment的切换，并且可以通过可视化的方式，看见App的交互流程。
 - 优点
@@ -32,8 +38,7 @@
     - ViewModel支持
 
 
-### 02.Navigation实战必备
-#### 2.1 学习方式
+#### 1.2 学习方式
 - 最好的学习方式仍然是通过官方文档，下面是官方的学习地址：
     - 谷歌官方教程：[Navigation Codelab](https://codelabs.developers.google.com/codelabs/android-navigation/#0)
     - 谷歌官方文档：[Navigation](https://developer.android.com/guide/navigation/)
@@ -42,36 +47,29 @@
     - 官方为这个Demo提供了 **一系列详细的教程**，通过一步步，引导学习每一个类或者组件的应用场景，最终完全上手 **Navigation**。
 
 
-### 03.Navigation实战必备
-#### 3.1 最关键的三要素
+### 02.Navigation实战必备
+#### 2.1 最关键的三要素
 - Navigation Graph(New XML resource)	
     - 如我们的第一张图所示，这是一个新的资源文件，用户在可视化界面可以看出他能够到达的Destination(用户能够到达的屏幕界面)，以及流程关系。
 - NavHostFragment(Layout XML view)	
     - 当前Fragment的容器
 - NavController(Kotlin/Java object)	
-    - 导航的控制者
+    - 导航的控制者，主要是负责fragment的栈的管理
 
 
-
-#### 3.2 举个通俗案例
+#### 2.2 举个通俗案例
 - 可以将Navigation Graph看作一个地图，NavHostFragment看作一个车，以及把NavController看作车中的方向盘。
 - Navigation Graph中可以看出各个地点（Destination）和通往各个地点的路径，NavHostFragment可以到达地图中的各个目的地，但是决定到什么目的地还是方向盘NavController，虽然它取决于开车人（用户）。
 
 
-#### 3.3 关键的步骤流程
+#### 2.3 关键的步骤流程
 - 第一步依赖相关库
-    ``` groovy
-    dependencies {
-        def nav_version = '1.0.0-alpha01'
-        implementation "android.arch.navigation:navigation-fragment:$nav_version"
-        implementation "android.arch.navigation:navigation-ui:$nav_version"
-    }
-    ```
+    - 添加navigation相关的依赖库
 - 第二步创建navigation导航
     - 资源文件res目录下创建navigation目录 -> 右击navigation目录New一个Navigation resource file
     - 创建一个Destination，如果说navigation是我们的导航工具，Destination是我们的目的地
 - 第三步建立NavHostFragment
-    - 创建一个布局文件，需要是fragment，
+    - 创建一个布局文件，需要是fragment
     ```
     <androidx.constraintlayout.widget.ConstraintLayout
         ...>
@@ -108,7 +106,7 @@
 
 
 
-#### 4.1 Navigation架构图
+#### 4.1 Navigation架构分析
 - `NavGraphFragment`是什么：导航界面的容器
     - 主要是承载fragment的一个容易，其实就是一个拓展fragment。
 - `nav_graph.xml`是什么：声明导航结构图
@@ -126,8 +124,7 @@
 
 #### 4.3 NavHostFragment导航容器
 - `NavHostFragment`是什么：导航界面的容器
-    - 使用原生的API，想展示一个Fragment，我们首先也需要 **定义一个容器承载它**。以往，它可能是一个 **RelativeLayout** 或者 **FrameLayout**，而现在，它被替换成了 **NavHostFragment**。
-    - 这也就说明了，为什么要往Activity的layout文件中提前扔进去一个NavHostFragment，因为我们需要导航的这些Fragment都展示在NavHostFragment上面。
+    - 使用原生的API，想展示一个Fragment，我们首先也需要 **定义一个容器承载它**。为什么要往Activity的layout文件中提前扔进去一个NavHostFragment，因为我们需要导航的这些Fragment都展示在NavHostFragment上面。
 - 实际上它做了什么呢？来看一下NavHostFragment的onCreateView()方法：
     ``` Java
     public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container,
@@ -143,19 +140,19 @@
     app:defaultNavHost="true"
     app:navGraph="@navigation/study_navigation"
     ```
-- app:defaultNavHost="true"这个属性意味着你的NavHostFragment将会 **拦截系统Back键的点击事件**（因为系统的back键会直接关闭Activity而非切换Fragment），你同时 **必须重写** Activity的 **onSupportNavigateUp()** 方法，类似这样：
+    - app:defaultNavHost="true"这个属性意味着你的NavHostFragment将会 **拦截系统Back键的点击事件**（因为系统的back键会直接关闭Activity而非切换Fragment），你同时 **必须重写** Activity的 **onSupportNavigateUp()** 方法，类似这样：
     ``` Kotlin
     override fun onSupportNavigateUp(): Boolean {
         return findNavController(R.id.my_nav_host_fragment).navigateUp()
     }
     ```
-- app:navGraph="@navigation/study_navigation"这个属性就很好理解了，它会指向一个navigation_graph的xml文件。这之后，NavGraphFragment就会 **导航并展示对应的Fragment**。
+    - app:navGraph="@navigation/study_navigation"这个属性就很好理解了，它会指向一个navigation_graph的xml文件。这之后，NavGraphFragment就会 **导航并展示对应的Fragment**。
 
 
 #### 4.4 nav_graph导航结构图
 - `nav_graph.xml`是什么：声明导航结构图
-    - NavHostFragment作为Activity导航的 **容器** ，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
-- NavHostFragment在 **获取** 并 **解析** 完这个xml资源文件后。它首先需要知道的是：类似APP的home界面，NavHostFragment首先要导航到哪里?
+    - NavHostFragment作为Activity导航的容器，然后，其 **app:navGraph** 属性指向一个navigation_graph的xml文件，以声明其 **导航的结构**。
+- NavHostFragment在**获取并解析完**这个xml资源文件后。它首先需要知道的是：类似APP的home界面，NavHostFragment首先要导航到哪里?
     ``` xml
     <?xml version="1.0" encoding="utf-8"?>
     <navigation xmlns:android="http://schemas.android.com/apk/res/android"
@@ -176,7 +173,7 @@
     </navigation>
     ```
 - 在navigation的根节点下，我们需要处理这样一个属性：app:startDestination="@id/home_dest"
-    - **Destination** 是一个很关键的单词，它的直译是 **目的地**。
+    - **destination** 是一个很关键的单词，它的直译是 **目的地**。
     - **app:startDestination**属性便是声明这个id对应的 **Destination** 会被作为 **默认布局** 加载到Activity中。这也就说明了，为什么我们的sample，默认会显示 **NavigationFragment**。
     - 现在，我们的app默认展示了NavigationFragment, 那么接下来，我们如何实现跳转逻辑的处理呢？
 
@@ -185,7 +182,7 @@
 #### 4.5 Action声明导航行为
 - Action标签是什么：声明导航的行为
     - 声明了这样一个Action标签，这是一个 **导航的行为**：
-    ```xml
+    ``` xml
     <action
         android:id="@+id/home_dest_one"
         app:destination="@id/flow_step_one_dest" />
@@ -199,6 +196,7 @@
     }
     ```
 - Navigation还提供了一个 **app:popUpTo** 属性，它的作用是声明**导航行为** 将 **返回到** id对应的Fragment。
+
 
 
 #### 4.6 Fragment通过代码声明导航
@@ -218,11 +216,8 @@
 
 
 
-
-
 ### 05.彻底搞懂Navigation
-- 在这之前，您首先需要达到 **熟练使用Navigation**，本文地初衷并非是 **一步到位**，而是尝试 **循序渐进**。
-- 这种方式能帮助你我 **更深刻的理解** Navigation的整体，让我们换个角度，不再是 **源码的观众**，而是 **架构的设计者**。
+- 在这之前，首先需要达到 **熟练使用Navigation**。通过逆向思考，能帮助你我 **更深刻的理解** Navigation的整体，让我们换个角度，不再是 **源码的观众**，而是 **架构的设计者**。
 
 
 #### 5.1 设计NavHostFragment
@@ -267,7 +262,7 @@
     * 1.对navigation资源文件夹下nav_graph.xml的 **解析**
     * 2.通过解析xml，获取所有 **Destination**（目标点）的 **引用** 或者 **Class的引用**
     * 3.记录当前栈中 **Fragment的顺序**
-    * 4.管理控制 **导航行为**
+    * 4.管理控制 **导航行为**，比如跳转下一个页面，关闭某页面等
 - **NavController** 持有了一个 **NavInflater** ,并通过 **NavInflater** 解析xml文件。
     - 这之后，获取了所有 **Destination**（在本文中即**Page1Fragment** , **Page2Fragment** , **Page3Fragment** ） 的 Class对象，并通过反射的方式，实例化对应的 **Destination**，通过一个队列保存：
     ```
@@ -343,6 +338,18 @@
     ```
 - 不同的 **Navigator** 对应不同的 **NavDestination**
     - **FragmentNavigator** 对应的是 **FragmentNavigator.Destination**，你可以把他理解为案例中的 **Fragment** 。
+
+
+### 06.思考和疑惑分析
+#### 6.1 能多个navController吗
+- 简单来说，就是你的项目中，有多个 Activity + NavHostFragment ，这一种该如何处理 Nav 路由跳转
+
+
+#### 6.2 返回上页面的生命周期
+
+
+
+
 
 
 
