--- a/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
@@ -36,6 +36,11 @@
     - 可以绑定Toolbar、BottomNavigationView和ActionBar等
     - SafeArgs（Gradle插件） 数据传递时提供类型安全性
     - ViewModel支持
+- 缺点
+    - 所有节点定义在一个nav_graph.xml不好管理，不方便定位跳转链路，单个文件过大。[嵌套使用](https://developer.android.google.cn/guide/navigation/navigation-nested-graphs?hl=zh-cn)
+    - replace的方式跳转时销毁view，返回时会重新创建view，绑定数据
+    - navigate 到新的页面，被覆盖的页面View 销毁，但是保留了 fragment 实例（未被 destroy），当这个 fragment 被 resume 的时候，View 会被重新创建。
+
 
 
 #### 1.2 学习方式
