--- a/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.Crash治理优化总结.md
@@ -45,7 +45,7 @@
 ### 01.前沿概述
 #### 1.1 背景前沿介绍
 - Crash率是衡量一个App好坏的重要指标之一
-    - 如果你忽略了它的存在，它就会愈演愈烈，最后造成大量用户的流失，进而给公司带来无法估量的损失。
+    - 如果你忽略了它的存在，它就会愈演愈烈，最后造成部分用户的流失，而且影响功能的正常使用，让体验不好。
 
 
 #### 1.2 思考一些问题
@@ -116,10 +116,12 @@
 #### 2.4 核心catch上报
 - 核心try-catch建议增加APM异常上报
     - 
-
+- 如何捕获下层基础库异常，上报到APM？
+    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然
 
 
 #### 2.5 不要随意catch
+
 
 
 
