--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -1,4 +1,96 @@
 #### 目录介绍
+- 01.整体概述
+    - 1.1 项目背景说明
+    - 1.2 遇到问题记录
+    - 1.3 基础概念介绍
+    - 1.4 开发设计目标
+- 02.蓝牙基础概念
+    - 2.1 蓝牙作用说明
+    - 2.2 蓝牙必备点
+    - 2.3 配对和连接区别
+- 03.蓝牙实践思路
+    - 3.1 蓝牙最简单实践
+- 04.蓝牙实践坑
+- 05.方案设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+    - 5.6 组件化通信
+- 06.稳定性实践说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
+- 07.项目优化点说明
+
+
+### 01.整体概述
+#### 1.1 项目背景说明
+
+
+#### 1.2 遇到问题记录
+
+
+#### 1.3 基础概念介绍
+
+
+#### 1.4 开发设计目标
+
+
+### 02.蓝牙基础概念
+#### 2.1 蓝牙作用说明
+- Android 平台包含蓝牙网络堆栈支持，此支持能让设备以无线方式与其他蓝牙设备交换数据。Android 应用可通过 Bluetooth API 执行以下操作：
+    - 扫描其他蓝牙设备
+    - 查询本地蓝牙适配器的配对蓝牙设备
+    - 建立 RFCOMM 通道
+    - 通过服务发现连接到其他设备
+    - 与其他设备进行双向数据传输
+    - 管理多个连接
+- 蓝牙基础介绍
+    - 为了让支持蓝牙的设备能够在彼此之间传输数据，它们必须先通过配对过程形成通信通道。
+    - 在可检测到的设备接受配对请求后，这两台设备会完成绑定过程，并在此期间交换安全密钥。二者会缓存这些密钥，以供日后使用。完成配对和绑定过程后，两台设备会交换信息。
+    - 当会话完成时，发起配对请求的设备会发布已将其链接到可检测设备的通道。但是，这两台设备仍保持绑定状态，因此在未来的会话期间，只要二者在彼此的范围内且均未移除绑定，便可自动重新连接。
+
+
+#### 2.2 蓝牙必备点
+- 使用蓝牙进行通信的四大必需任务：
+    - 设置蓝牙、查找局部区域内的配对设备或可用设备、连接设备，以及在设备之间传输数据。
+- 蓝牙权限
+    - 如要在应用中使用蓝牙功能，您必须声明两个权限。第一个是 BLUETOOTH。您需要此权限才能执行任何蓝牙通信，例如请求连接、接受连接和传输数据等。
+    - 第二个必须声明的权限是 ACCESS_FINE_LOCATION。您的应用需要此权限，因为蓝牙扫描可用于收集用户的位置信息。此类信息可能来自用户自己的设备，以及在商店和交通设施等位置使用的蓝牙信标。
+
+
+#### 2.3 配对和连接区别
+- 被配对与被连接之间存在区别：
+    - 被配对是指两台设备知晓彼此的存在，具有可用于身份验证的共享链路密钥，并且能够与彼此建立加密连接。
+    - 被连接是指设备当前共享一个 RFCOMM 通道，并且能够向彼此传输数据。要求规定，只有先对设备进行配对，然后才能建立 RFCOMM 连接。在使用 Bluetooth API 发起加密连接时，系统会自动执行配对。
+
+
+
+
+### 03.蓝牙实践思路
+#### 3.1 蓝牙最简单实践
+- 第一步：设置蓝牙
+    - 验证设备支持蓝牙，确保在此情况下启用该功能。然后代码获取蓝牙bluetoothAdapter，然后可以通过该对象判断蓝牙是否启用
+- 第二步：查找设备
+    - 利用 BluetoothAdapter，您可以通过设备发现或查询配对设备的列表来查找远程蓝牙设备。
+    - 查询已配对设备，调用 getBondedDevices()。您可以查询所有已配对设备，并获取每台设备的名称和 MAC 地址。
+    - 发现设备。调用 startDiscovery()，异步检索，会对发现的每台设备进行页面扫描，以检索其蓝牙名称。
+- 第三步：连接设备
+    - 在两台设备之间创建连接，必须同时实现服务器端和客户端机制，因为其中一台设备必须开放服务器套接字，而另一台设备必须使用服务器设备的 MAC 地址发起连接。
+
+
+
+### 参考链接
+- [蓝牙官方文档](https://developer.android.google.cn/guide/topics/connectivity/bluetooth)
+
+
+
+
+
 
 
 
