--- a/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/01.蓝牙开发业务实践.md
@@ -8,8 +8,10 @@
     - 2.1 蓝牙作用说明
     - 2.2 蓝牙必备点
     - 2.3 配对和连接区别
+    - 2.4 连接技术分类
 - 03.蓝牙实践思路
     - 3.1 蓝牙最简单实践
+    - 3.2 一些核心类说明
 - 04.蓝牙实践坑
 - 05.方案设计
     - 5.1 整体架构图
@@ -63,11 +65,18 @@
     - 第二个必须声明的权限是 ACCESS_FINE_LOCATION。您的应用需要此权限，因为蓝牙扫描可用于收集用户的位置信息。此类信息可能来自用户自己的设备，以及在商店和交通设施等位置使用的蓝牙信标。
 
 
+
 #### 2.3 配对和连接区别
 - 被配对与被连接之间存在区别：
     - 被配对是指两台设备知晓彼此的存在，具有可用于身份验证的共享链路密钥，并且能够与彼此建立加密连接。
     - 被连接是指设备当前共享一个 RFCOMM 通道，并且能够向彼此传输数据。要求规定，只有先对设备进行配对，然后才能建立 RFCOMM 连接。在使用 Bluetooth API 发起加密连接时，系统会自动执行配对。
 
+
+#### 2.4 连接技术分类
+- 什么是蓝牙连接技术
+    - 是自动将每台设备准备为一个服务器，从而使每台设备开放一个服务器套接字并侦听连接。在此情况下，任一设备都可发起与另一台设备的连接，并成为客户端。或者，其中一台设备可显式托管连接并按需开放一个服务器套接字，而另一台设备则发起连接。
+- 作为服务器连接和作为客户端连接如何理解？
+    - 待完善
 
 
 
@@ -81,12 +90,30 @@
     - 发现设备。调用 startDiscovery()，异步检索，会对发现的每台设备进行页面扫描，以检索其蓝牙名称。
 - 第三步：连接设备
     - 在两台设备之间创建连接，必须同时实现服务器端和客户端机制，因为其中一台设备必须开放服务器套接字，而另一台设备必须使用服务器设备的 MAC 地址发起连接。
+- 第四步：管理连接后数据传递
+    - 成功连接多台设备后，每台设备都会有已连接的 BluetoothSocket。然后使用 BluetoothSocket 传输数据。
+
+
+
+#### 3.2 一些核心类说明
+- BluetoothAdapter：表示本地蓝牙适配器（蓝牙无线装置），是所有蓝牙交互的入口点。借助该类，您可以发现其他蓝牙设备、查询已绑定（已配对）设备的列表、使用已知的 MAC 地址实例化 BluetoothDevice，以及通过创建 BluetoothServerSocket 侦听来自其他设备的通信。
+- BluetoothDevice：表示远程蓝牙设备。借助该类，您可以通过 BluetoothSocket 请求与某个远程设备建立连接，或查询有关该设备的信息，例如设备的名称、地址、类和绑定状态等。
+- BluetoothSocket：表示蓝牙套接字接口（类似于 TCP Socket）。这是允许应用使用 InputStream 和 OutputStream 与其他蓝牙设备交换数据的连接点。
+- BluetoothServerSocket：表示用于侦听传入请求的开放服务器套接字（类似于 TCP ServerSocket）。如要连接两台 Android 设备，其中一台设备必须使用此类开放一个服务器套接字。当远程蓝牙设备向此设备发出连接请求时，该设备接受连接，然后返回已连接的 BluetoothSocket。
+- BluetoothClass：描述蓝牙设备的一般特征和功能。这是一组只读属性，用于定义设备的类和服务。
+- BluetoothProfile：表示蓝牙配置文件的接口。蓝牙配置文件是适用于设备间蓝牙通信的无线接口规范。举个例子：免提配置文件。
+- BluetoothHeadset：提供蓝牙耳机支持，以便与手机配合使用。这包括蓝牙耳机配置文件和免提 (v1.5) 配置文件。
+- BluetoothA2dp：定义如何使用蓝牙立体声音频传输配置文件 (A2DP)，通过蓝牙连接将高质量音频从一个设备流式传输至另一个设备。
+- BluetoothHealth：表示用于控制蓝牙服务的健康设备配置文件代理。
+- BluetoothHealthCallback：用于实现 BluetoothHealth 回调的抽象类。您必须扩展此类并实现回调方法，以接收关于应用注册状态和蓝牙通道状态变化的更新内容。
+- BluetoothHealthAppConfiguration：表示第三方蓝牙健康应用注册的应用配置，该配置旨在实现与远程蓝牙健康设备的通信。
+- BluetoothProfile.ServiceListener：当 BluetoothProfile 进程间通信 (IPC) 客户端连接到运行特定配置文件的内部服务或断开该服务连接时，向该客户端发送通知的接口。
 
 
 
 ### 参考链接
 - [蓝牙官方文档](https://developer.android.google.cn/guide/topics/connectivity/bluetooth)
-
+- [蓝牙低功耗概览](https://developer.android.google.cn/guide/topics/connectivity/bluetooth-le)
 
 
 
