--- a/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
+++ b/Read/ReadJavaWiki/08.类的加载/01.类加载的详细过程.md
@@ -4,37 +4,14 @@
 - 03.类的连接
 - 04.类的初始化
 - 05.类加载器
-
-
-
-
-
-
-
-
-
-- **准备：**
-    - 准备阶段是正式为类变量分配内存并设置类变量初始值的阶段。这些变量所使用的内存都将在方法区中分配。只包括类变量。初始值“通常情况”下是数据类型的零值。
-    - “特殊情况”下，如果类字段的字段属性表中存在ConstantValue属性，那么在准备阶段变量的值就会被初始化为ConstantValue属性所指定的值。
-- **解析：**
-    - 虚拟机将常量池内的符号引用替换为直接引用的过程。
-    - “动态解析”的含义就是必须等到程序实际运行到这条指令的时候，解析动作才能进行。相对的，其余可触发解析的指令都是“静态”的，可以在刚刚完成加载阶段，还没有开始执行代码时就进行解析。
-- **初始化：**
-    - 类加载过程中的最后一步。
-    - 初始化阶段是执行类构造器`<clinit>()`方法的过程。
-    - `<clinit>()`方法是由编译器自动收集类中的**所有类变量的赋值动作和静态语句块中的语句合并产生的**。
-    - `<clinit>()`与类的构造函数不同，它不需要显示地调用父类构造器，虚拟机会保证在子类的`<clinit>()`方法执行之前，父类的`<clinit>()`方法已经执行完毕。
-    - **简单地说，初始化就是对类变量进行赋值及执行静态代码块。**
-
-
-
+- 07.看几个案例题
 
 
 ### 01.什么是类加载
 - 什么是类加载
-    - 虚拟机把描述类的数据从CLass文件加载到内存，并对数据进行校验，解析和初始化，最终形成可以被虚拟机直接使用的Java类型，这就是虚拟机的类加载机制（懒加载）。
+    - 虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验，解析和初始化，最终形成可以被虚拟机直接使用的Java类型，这就是虚拟机的类加载机制（懒加载）。
 - 类加载过程
-    - 加载--连接--初始化--使用--卸载
+    - 加载--连接(验证，准备，解析)--初始化--使用--卸载
 
 
 
@@ -145,8 +122,13 @@
 ### 04.类的初始化
 #### 4.1 初始化说明
 - 什么时候初始化
-    * 遇到`new`、`getstatic`、`putstatic`或`invokestatic`这四个字节码指令时，如果类没有进行过初始化，则需要先触发其初始化。生成这四条命令的最常见的静态字段（被`final`修饰、已在编译器把结果放入常量池的静态字段除外）的时候，以及调用一个类的静态方法的时候。
-    * 使用反射对类进行调用，如果该类没有进行初始化 ，则需要先触发其初始化
+    * 遇到`new`、`getstatic`、`putstatic`或`invokestatic`这四个字节码指令时，如果类没有进行过初始化，则需要先触发其初始化。
+- 生成这四条命令的最常见的静态字段
+    - 使用new关键字实例化对象的时候，这种最常见。
+    - 读取或设置一个类的静态字段（被final修饰、已在编译期把结果放入常量池的静态字段除外）的时候，以及调用一个类的静态方法的时候。
+        - 调用一个类型的静态方法时（即在字节码中执行invokestatic指令）
+        - 调用一个类型或接口的静态字段，或者对这些静态字段执行赋值操作时（即在字节码中，执行getstatic或者putstatic指令），不过用final修饰的静态字段除外，它被初始化为一个编译时常量表达式
+    - 使用反射对类进行调用，如果该类没有进行初始化 ，则需要先触发其初始化。
     * 当初始化一个类的时候，如果发现其父类还没有进行过初始化，则需要先触发其父类的初始化。
     * 当虚拟机启动时，用户需要制定一个需要执行的主类，即：包含main方法的类。虚拟机会先初始化这个类。
     * 当使用JDK1.7的动态语言支持时，如果一个`java.lang.invoke.MethodHandle`实例最后的解析结果`REF_getStatic,REF_putStatic,REF_invokeStatic`的方法句柄，并且这个方法句柄所对应的类没有进行初始化，则需要先出发初始化。
@@ -287,21 +269,30 @@
     - 3.类的加载，会将其所有的父类都加载一遍，直到java.lang.Object。（因为Object是所有类的父类）
 
 
+### 07.看几个案例题
+#### 7.1 常量变化的原理
+- 看下面这段代码，说一下准备阶段和初始化阶段常量变化的原理？
+    ```
+    public static int value1  = 5;
+    public static int value2  = 6;
+    static{
+        value2 = 66;
+    }
+    ```
+- 准备阶段和初始化阶段常量变化？
+    - 结果
+        - 在准备阶段value1和value2都等于0；
+        - 在初始化阶段value1和value2分别等于5和66；
+- 变量初始化过程？
+    - 所有类变量初始化语句和静态代码块都会在编译时被前端编译器放在收集器里头，存放到一个特殊的方法中，这个方法就是<clinit>方法，即类/接口初始化方法，该方法只能在类加载的过程中由JVM调用；
+    - 编译器收集的顺序是由语句在源文件中出现的顺序所决定的，静态语句块中只能访问到定义在静态语句块之前的变量；
+    - 如果超类还没有被初始化，那么优先对超类初始化，但在<clinit>方法内部不会显示调用超类的<clinit>方法，由JVM负责保证一个类的<clinit>方法执行之前，它的超类<clinit>方法已经被执行。
+    - JVM必须确保一个类在初始化的过程中，如果是多线程需要同时初始化它，仅仅只能允许其中一个线程对其执行初始化操作，其余线程必须等待，只有在活动线程执行完对类的初始化操作之后，才会通知正在等待的其他线程。(所以可以利用静态内部类实现线程安全的单例模式)
+    - 如果一个类没有声明任何的类变量，也没有静态代码块，那么可以没有类<clinit>方法；
 
 
 
 
-
-
-### 01.NoClassDefFoundError 和 ClassNotFoundException区别
-- NoClassDefFoundError是一个错误(Error)，而ClassNOtFoundException是一个异常，在Java中对于错误和异常的处理是不同的，我们可以从异常中恢复程序但却不应该尝试从错误中恢复程序。
-- ClassNotFoundException的产生原因：
-    - Java支持使用Class.forName方法来动态地加载类，任意一个类的类名如果被作为参数传递给这个方法都将导致该类被加载到JVM内存中，如果这个类在类路径中没有被找到，那么此时就会在运行时抛出ClassNotFoundException异常。
-    - 另外还有一个导致ClassNotFoundException的原因就是：当一个类已经某个类加载器加载到内存中了，此时另一个类加载器又尝试着动态地从同一个包中加载这个类。通过控制动态类加载过程，可以避免上述情况发生。
-    - 解决该问题需要确保所需的类连同它依赖的包存在于类路径中，常见问题在于类名书写错误。
-- NoClassDefFoundError产生的原因在于：
-    - 如果JVM或者ClassLoader实例尝试加载（可以通过正常的方法调用，也可能是使用new来创建新的对象）类的时候却找不到类的定义。要查找的类在编译的时候是存在的，运行的时候却找不到了。这个时候就会导致NoClassDefFoundError.造成该问题的原因可能是打包过程漏掉了部分类，或者jar包出现损坏或者篡改。
-    - 解决这个问题的办法是查找那些在开发期间存在于类路径下但在运行期间却不在类路径下的类。
 
 
 
