--- a/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
@@ -351,7 +351,12 @@
 
 
 #### 6.2 返回上页面的生命周期
-
+- 通过Nav进行跳转，比如：findNavController().navigate(R.id.home_dest_one)。调用逻辑的链路大概是：
+    - NavController ---> navigate方法 ---> navigator.navigate(823行)
+    - Navigator ----> navigate方法 ----> 然后找到Navigator接口实现类FragmentNavigator
+    - FragmentNavigator ----> navigate方法 ---> 还是动态添加fragment【注意是replace】
+- 导致结果
+    - replace() 方法不会保留 Fragment 的状态。当从上一个页面返回到当前页面，它会重建(也就是重新走onCreateView和onViewCreated)
 
 
 
