--- a/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/02.Navigation学习.md
@@ -18,9 +18,11 @@
     - 5.1 设计NavHostFragment
     - 5.2 设计NavController
     - 5.3 NavDestination和Navigator
+    - 5.4 Navigation为何重建fragment
 - 06.思考和疑惑分析
     - 6.1 能多个navController吗
     - 6.2 返回上页面的生命周期
+    - 6.3 如何避免fragment重建
 
 
 
@@ -345,6 +347,13 @@
     - **FragmentNavigator** 对应的是 **FragmentNavigator.Destination**，你可以把他理解为案例中的 **Fragment** 。
 
 
+#### 5.4 Navigation为何重建fragment
+- https://juejin.cn/post/6979575721693806629
+- https://www.jianshu.com/p/eae6cbeb4177
+- https://juejin.cn/post/6844904131824467981#heading-1
+
+
+
 ### 06.思考和疑惑分析
 #### 6.1 能多个navController吗
 - 简单来说，就是你的项目中，有多个 Activity + NavHostFragment ，这一种该如何处理 Nav 路由跳转
@@ -360,6 +369,7 @@
 
 
 
-
+#### 6.3 如何避免fragment重建
+- https://juejin.cn/post/6925715156081049608
 
 
