--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -1,7 +1,160 @@
 #### 目录介绍
-- 01.两种缓存简单介绍
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念介绍
+    - 1.4 设计目标
+    - 1.5 产生收益分析
+- 02.市面存储方案
+    - 2.1 缓存存储有哪些
+    - 2.2 磁盘缓存有哪些
+    - 2.3 存储该如何选择
+    - 2.4 存储方案优缺点
+    - 2.5 常见的缓存策略
+- 03.存储方案原理
+    - 3.1 Sp存储原理分析
+    - 3.2 MMKV存储原理分析
+    - 3.3 LruCache原理分析
+    - 3.4 DiskLruCache分析
+- 04.通用缓存方案思路
+    - 4.1 如何兼容不同缓存
+    - 4.2 打造通用缓存Api
+    - 4.3 一键切换不同缓存方式
+    - 4.4 缓存的过期处理
+    - 4.5 缓存的阀值处理
+    - 4.6 缓存的线程安全性
+    - 4.7 缓存数据的迁移
+- 05.方案基础设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+- 06.其他设计说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
+- 07.其他说明介绍
+    - 7.1 参考链接
 
 
+### 01.整体概述
+#### 1.1 项目背景
+#### 1.2 遇到问题
+#### 1.3 基础概念介绍
+#### 1.4 设计目标
+#### 1.5 产生收益分析
+
+
+### 02.市面存储方案
+#### 2.1 缓存存储有哪些
+
+
+#### 2.2 磁盘缓存有哪些
+
+
+#### 2.3 存储该如何选择
+
+
+#### 2.4 存储方案优缺点
+
+
+#### 2.5 常见的缓存策略
+- 现在主流的app中图片等资源的缓存策略一般是分两级
+    - 一个是内存级别的缓存，一个是磁盘级别的缓存。
+- 作为android系统的维护者google也开源了其缓存方案，LruCache和DiskLruCache。
+    - 从android3.1开始LruCache已经作为android源码的一部分维护在android系统中，为了兼容以前的版本android的support-v4包也提供了LruCache的维护，如果App需要兼容到android3.1之前的版本就需要使用support-v4包中的LruCache，如果不需要兼容到android3.1则直接使用android源码中的LruCache即可。
+    - 需要注意的是DiskLruCache并不是android源码的一部分。
+
+
+
+
+### 03.存储方案原理
+#### 3.1 Sp存储原理分析
+
+
+#### 3.2 MMKV存储原理分析
+
+
+#### 3.3 LruCache原理分析
+- 在LruCache的源码中，关于LruCache有这样的一段介绍：
+    - cache对象通过一个强引用来访问内容。每次当一个item被访问到的时候，这个item就会被移动到一个队列的队首。当一个item被添加到已经满了的队列时，这个队列的队尾的item就会被移除。
+- LruCache核心思想
+    - LRU是近期最少使用的算法，它的核心思想是当缓存满时，会优先淘汰那些近期最少使用的缓存对象。采用LRU算法的缓存有两种：LrhCache和DiskLruCache，分别用于实现内存缓存和硬盘缓存，其核心思想都是LRU缓存算法。
+- 初始化设置须知
+    - 需要设置一个最大的值maxSize，主要用于设置LruCache链表的最大值。
+- put方法主要做了什么
+    - 需要传递两个参数：K和V，首先做了一下参数的判断，然后定义一个保存前一个Value值得临时变量，让putCount（put执行的次数）自增，让map的size大小自增。
+    - LruCache put方法，将键值对压入Map数据结构中，若这是Map的大小已经大于LruCache中定义的最大值，则将Map中最早压入的元素remove掉
+- get方法主要做了什么
+    - 具体来说，判断map中是否含有key值value值，若存在，则hitCount（击中元素数量）自增，并返回Value值，若没有击中，则执行create(key)方法，这里看到create方法是一个空的实现方法，返回值为null，所以可以重写该方法，在调用get（key）的时候若没有找到value值，则自动创建一个value值并压入map中。
+
+
+
+#### 3.4 DiskLruCache分析
+- DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
+
+
+
+
+### 04.通用缓存方案思路
+#### 4.1 如何兼容不同缓存
+
+
+#### 4.2 打造通用缓存Api
+
+
+#### 4.3 一键切换不同缓存方式
+
+
+#### 4.4 缓存的过期处理
+
+
+#### 4.5 缓存的阀值处理
+
+
+#### 4.6 缓存的线程安全性
+
+
+#### 4.7 缓存数据的迁移
+
+
+### 05.方案基础设计
+#### 5.1 整体架构图
+
+
+#### 5.2 UML设计图
+
+
+#### 5.3 关键流程图
+
+
+#### 5.4 接口设计图
+
+
+#### 5.5 模块间依赖关系
+
+
+### 06.其他设计说明
+#### 6.1 性能设计
+
+
+#### 6.2 稳定性设计
+
+
+#### 6.3 灰度设计
+
+
+#### 6.4 降级设计
+
+
+#### 6.5 异常设计
+
+
+### 07.其他说明介绍
+#### 7.1 参考链接
 
 
 ### 01.两种缓存简单介绍
