--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -24,6 +24,7 @@
     - 4.5 缓存的阀值处理
     - 4.6 缓存的线程安全性
     - 4.7 缓存数据的迁移
+    - 4.8 各种缓存效率对比
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -121,6 +122,9 @@
 #### 4.7 缓存数据的迁移
 
 
+#### 4.8 各种缓存效率对比
+
+
 ### 05.方案基础设计
 #### 5.1 整体架构图
 
@@ -168,7 +172,8 @@
 
 
 
-
+#### 参考
+- https://github.com/JeremyLiao/FastSharedPreferences
 
 
 
